--- a/blog/2022-09-01-weaviate-cloud-service/index.mdx
+++ b/blog/2022-09-01-weaviate-cloud-service/index.mdx
@@ -1,32 +1,35 @@
 ---
-title: Weaviate introduces an all-new business model for vector search
-slug: weaviate-cloud-services
-authors: [bob]
+authors:
+- bob
 date: 2022-09-01
-tags: ['release']
+description: 'Press Release: Pay-as-you-grow comes to Vector Search.'
 image: ./img/hero.png
-description: "Press Release: Pay-as-you-grow comes to Vector Search."
+slug: weaviate-cloud-services
+tags:
+- release
+title: Weaviate introduces an all-new business model for vector search
 ---
-![Weaviate introduces an all-new business model for vector search](./img/hero.png)
+
+![Weaviate引入了全新的向量搜索商业模型](./img/hero.png)
 
 <!-- truncate -->
 
-**Amsterdam NL - September 1, 2022**
+**荷兰阿姆斯特丹 - 2022年9月1日**
 
-Weaviate, the leader in open-source vector database technology, announces an [entirely new pricing model](/pricing) for its Weaviate Cloud Services.
+Weaviate，开源向量数据库技术的领导者，宣布其Weaviate云服务的[全新定价模型](/pricing)。
 
-Inspired by "pay-as-you-grow" pricing used in cloud storage, Weaviate has introduced a new business model that makes it easier and more affordable for enterprises of any scale to take advantage of its Weaviate vector database. Beginning today, users have the option of paying a usage-based rate for search on a per-dimension basis. Pricing begins at $0.05 per million dimensions. (No, that's not a typo; the rate is five cents per million.)
+受到云存储中使用的“按需增长”定价方式的启发，Weaviate引入了一种新的商业模式，使企业可以更轻松、更经济地利用其Weaviate向量数据库，而不论企业规模大小。从今天开始，用户可以选择按维度计费的使用率来进行搜索。定价从每百万个维度起，每个维度的价格为0.05美元（不，这不是打字错误；价格是每百万个维度五美分）。
 
-> "At this point, as we've reached 1,500,000 downloads, a lot of people know and love our open-source software, but they want us to run it for them," says Weaviate's co-founder Bob van Luijt." So, we've created a ‘NoOps' option that allows them to pay only for what they use on our optimized Weaviate Cloud Services."
+"在目前阶段，我们已经达到了150万次下载，很多人都了解并喜爱我们的开源软件，但是他们希望我们为他们运行它，" Weaviate 的联合创始人 Bob van Luijt 说道。"因此，我们创建了一个'NoOps'选项，使他们只需按照他们在我们优化的 Weaviate 云服务上使用的内容付费。"
 
-In addition to remarkably convenient access to the latest vector database capabilities, Weaviate Cloud Services customers get dedicated customer support on a private Slack channel. However, consistent with Weaviate's commitment to creating truly open-source software, customers using the free service will always be able to access all of the Weaviate's vector database capabilities.
+除了极其便捷地访问最新的向量数据库功能外，Weaviate Cloud Services 客户还可以在私人的 Slack 频道上获得专属的客户支持。然而，与 Weaviate 致力于创建真正开源软件的承诺一致，使用免费服务的客户始终可以访问所有 Weaviate 的向量数据库功能。
 
-Weaviate vector database is an example of a "third wave" database technology. Data is processed by a machine learning model first, and AI models help in processing, storing, and searching through the data. As a result, Weaviate excels at answering questions in natural language, but it is not limited to language; it is as adaptable to searching images or even genetic information.
+Weaviate向量数据库是"第三波"数据库技术的一个例子。数据首先由机器学习模型进行处理，AI模型帮助处理、存储和搜索数据。因此，Weaviate在自然语言问题回答方面表现出色，但并不仅限于语言，它也适用于搜索图像甚至遗传信息。
 
-> "Depending on the machine-learning model used, a "document"—basically a data object—in a vector database typically has anywhere from 120 to 12,800 dimensions," van Luijt explains. "Since vector dimensions are the lowest common denominator, it makes sense for vector dimensions to be the cost basis, as opposed to API calls. We feel that this very transparent and predictable pricing model is consistent with our open-source philosophy."
+根据所使用的机器学习模型不同，矢量数据库中的“文档”（基本上是一个数据对象）通常具有120到12,800个维度，"van Luijt解释道。"由于矢量维度是最低公共基数，将矢量维度作为成本基础而不是API调用是合理的。我们认为这种非常透明和可预测的定价模型与我们的开源理念一致。"
 
-For more information about Weaviate an open-source vector database, visit: [https://weaviate.io](/)
+关于Weaviate开源向量数据库的更多信息，请访问：[https://weaviate.io](/)
 
-For more information about the company visit: [about-us](/company/about-us).
+有关公司的更多信息，请访问：[关于我们](/company/about-us)。
 
-Customers interested in the Weaviate Cloud Services can purchase service for $0.05 per million dimensions. Or, spend an entire dollar and get 20 million dimensions.
+对于对Weaviate云服务感兴趣的客户，可以以每百万维度0.05美元的价格购买服务。或者，花费整整1美元可以获得2000万维度。
