--- a/blog/2021-01-25-history-of-weaviate/index.mdx
+++ b/blog/2021-01-25-history-of-weaviate/index.mdx
@@ -1,25 +1,27 @@
 ---
-layout: post
-title: The History of Weaviate
-slug: history-of-weaviate
-authors: [bob]
+authors:
+- bob
 date: 2021-01-25
-tags: ['concepts']
+description: Weaviate is an open-source vector database with a build-in NLP model
+  called the Contextionary. Learn what makes Weaviate unique.
 image: ./img/hero.png
-# canonical-url: https://medium.com/semi-technologies/the-history-of-the-weaviate-vector-search-engine-17a274f36178
-# canonical-name: Medium
-description: "Weaviate is an open-source vector database with a build-in NLP model called the Contextionary. Learn what makes Weaviate unique."
+layout: post
+slug: history-of-weaviate
+tags:
+- concepts
+title: The History of Weaviate
 ---
-![The History of Weaviate](./img/hero.png)
 
-<!-- truncate -->
+![Weaviate的历史](./img/hero.png)
 
-In this article, I want to share the history of Weaviate, how the concept was born, and where we are heading towards in the near future.
+<!-- 省略 -->
 
-## A World of Wonders called Natural Language Processing
-Somewhere early 2015 I was introduced to the concept of word embeddings through the publication of an article that contained a machine-learning algorithm to turn individual words into embeddings called [GloVe](https://nlp.stanford.edu/projects/glove/).
+在这篇文章中，我想分享一下Weaviate的历史，以及这个概念是如何诞生的，以及我们在不久的将来将走向何方。
 
-### Example of an embedding
+## 自然语言处理的奇妙世界
+在2015年初的某个时候，我通过一篇文章了解到了词嵌入的概念，这篇文章介绍了一个将单词转化为嵌入向量的机器学习算法，称为[GloVe](https://nlp.stanford.edu/projects/glove/)。
+
+### 嵌入向量的示例
 
 ```txt
 squarepants 0.27442 -0.25977 -0.17438 0.18573 0.6309 0.77326 -0.50925 -1.8926
@@ -30,71 +32,71 @@ squarepants 0.27442 -0.25977 -0.17438 0.18573 0.6309 0.77326 -0.50925 -1.8926
 -0.30444 1.3929 0.088861
 ```
 
-If you are new to the world of word embeddings, a metaphor to understand them is in the form of a supermarket. The supermarket itself is a space in which products are stored based on the category they are in. Inside, you can find an apple by moving your shopping cart to the right coordinates in the fruit section and when you look around you, you'll find similar products like oranges, limes, bananas, etcetera, and you also know that a cucumber will be closer by than washing powder.
+如果你对词嵌入的世界还不太了解，可以用一个超市的比喻来理解它们。超市本身是一个空间，产品根据它们所属的类别进行存放。在超市里，你可以通过将购物车移到水果区的正确坐标来找到一个苹果，当你四处看看时，你会发现类似的产品，比如橙子、酸橙、香蕉等等，你也知道靠近你的会是黄瓜而不是洗衣粉。
 
 
-This is the same way a word embedding is structured. All the coordinates combined represent a multidimensional hyperspace (often around 300 dimensions) and words that have a similar meaning are more closely related to each other, like similar products in the store.
+这与词嵌入的结构方式相同。所有的坐标组合在一起代表一个多维超空间（通常是300维），具有相似含义的单词彼此之间更密切相关，就像商店中的类似产品。
 
-Being able to represent words in a space gives you a superpower, because it allows you to calculate with language! Instead of creating algorithms to understand language, it is now possible to simply look up what is in the neighborhood in the space.
+能够在空间中表示单词给予了您超能力，因为它使您能够使用语言进行计算！不再需要创建算法来理解语言，现在只需要简单地查找空间中的附近内容。
 
-## How to semantically store data objects
-While working on software projects in my day-to-day life, I noticed that one of the most recurring challenges presented itself in naming and searching. How would we call certain objects and how could we find data that was structured in different ways? I fell in love with the semantic web but the challenge I saw there, was the need to have people agree on naming conventions and standards.
+## 如何语义化存储数据对象
+在日常的软件项目中工作时，我注意到最常见的挑战之一是命名和搜索。我们应该如何称呼某些对象，以及如何找到以不同方式结构化的数据？我对语义网络产生了浓厚的兴趣，但我看到的挑战是需要让人们就命名约定和标准达成一致。
 
-This made me wonder, what if we wouldn't have to agree on this any more? What if we could just store data and have the machine figure out the concept that your data represents?
+这让我想到了，如果我们不再需要就此达成一致会怎样？如果我们可以只存储数据，让机器自动推断数据所代表的概念呢？
 
-The validation of the concept was chunked up into three main sections that were validated one by one.
+概念的验证分为三个主要部分，逐一进行验证。
 
-1. Can one get more context around a word by moving through the hyperspace? If so;
-1. Can one keep semantic meaning by calculating a centroid of a group of words (e.g., "thanks for the sushi last week")? If so;
-1. Can this be done fast without retraining the ML model?
+1. 通过在超空间中移动，能否获取更多单词的上下文？如果可以；
+2. 通过计算一组单词的质心（例如，“上周的寿司谢谢你”），能否保持语义意义？如果可以；
+1. 在不重新训练机器学习模型的情况下，是否可以快速完成这个操作？
 
-Finding more context around a word has to do with a concept called disambiguation. Take for example the word "apple". In the hyperspace, if you look for other words in the neighborhood, you will find words related to apple the fruit (e.g., other fruits, juices, etcetera) but also Apple the company (iPhone, Macintosh, and other concepts related to the company).
+寻找一个词的更多上下文与一个叫做消除歧义的概念有关。以单词“苹果”为例，在超空间中，如果你寻找该词附近的其他词，你会发现与水果苹果相关的词（例如其他水果、果汁等），但也会找到与苹果公司相关的词（iPhone、Macintosh以及与该公司相关的其他概念）。
 
-To validate if we could disambiguate the word "apple" the following simple step was taken. What if we looked for all the words that are in the neighborhood of the space in between "apple" and "fruit"? Turns out the results are way better! We can disambiguate by moving through the hyperspace while using individual words as beacons to navigate.
+为了验证我们是否能够消除“apple”一词的歧义，我们采取了以下简单的步骤。如果我们寻找位于“apple”和“fruit”之间空格附近的所有单词会怎么样？结果证明这样的结果要好得多！我们可以通过在超空间中移动并使用单词作为导航标记来消除歧义。
 
-![Vector Space](./img/vector-space.jpeg)
+![向量空间](./img/vector-space.jpeg)
 
-In the next step, the goal was to validate if we could keep semantic meaning when storing a data object in the hyperspace by calculating the centroid using the individual words as beacons. We did that as follows, the title of this Vogue article: "Louis Vuitton's New Capsule with League of Legends Brings French High Fashion to Online Gaming — and Vice Versa".
+在下一步中，我们的目标是验证在使用各个单词作为信标计算质心时，我们是否能够在超空间中保持语义含义。我们通过以下方式实现了这一目标，即使用这篇Vogue文章的标题：“Louis Vuitton's New Capsule with League of Legends Brings French High Fashion to Online Gaming — and Vice Versa”。
 
-If we look up the vector positions for the individual words (Louis, Vuitton, new, capsule, etc.) and place a new beacon in the center of the space of those vector positions, can we find the article by searching for "haute couture"? This turns out to work as well! Of course, through time, the centroid calculation algorithm in Weaviate has become way more sophisticated, but the overall concept is still the same.
+如果我们查找每个单词（Louis、Vuitton、new、capsule等）的向量位置，并将一个新的信标放置在这些向量位置的中心，我们是否可以通过搜索"高级定制"来找到这篇文章？这样做的效果也是可以的！当然，随着时间的推移，Weaviate中的质心计算算法变得更加复杂，但整体概念仍然相同。
 
-> By validating the above two assumptions, we knew that we could almost instantly store data objects in a semantic space rather than a more traditional row-column structure or graph. This allows us to index data based on its meaning.
+> 通过验证上述两个假设，我们知道我们几乎可以立即将数据对象存储在语义空间中，而不是传统的行列结构或图形中。这使我们能够根据数据的含义对其进行索引。
 
-Although we had validated the assumptions of the semantic concepts, it was not enough to create an actual semantic search engine. Weaviate also needed a data model to represent these results.
+尽管我们已经验证了语义概念的假设，但仅此还不足以创建一个真正的语义搜索引擎。Weaviate还需要一个数据模型来表示这些结果。
 
-## Things Rather Than Strings
-In September 2017 I wrote a [blog post](https://medium.com/bob-van-luijt/semantic-internet-of-things-42811e1ca7a7) about the overlap between the internet of things and the semantic web. IoT focuses on physical objects (i.e., "things") and the semantic web focuses on the mapping of data objects that represent something (a product, transaction, car, person, etcetera) which at the highest level of abstraction, are also "things".
+## 事物而非字符串
+在2017年9月，我写了一篇关于物联网和语义网之间重叠的[博客文章](https://medium.com/bob-van-luijt/semantic-internet-of-things-42811e1ca7a7)。物联网专注于物理对象（即“物”），而语义网专注于映射表示某物的数据对象（产品、交易、汽车、人等），在最高层次的抽象中，它们也是“物”。
 
-I wrote this article because, in January 2016, I was invited as part of the Google Developer Expert program in San Francisco, to visit the Ubiquity Conference. A conference where, back then, Google's Weave and Brillo were introduced to the public.
+我写这篇文章是因为在2016年1月，我作为Google Developer Expert计划的一部分，受邀前往旧金山参加Ubiquity Conference。这是一次会议，当时Google的Weave和Brillo被向公众介绍。
 
-Weave was the cloud application built around Brillo, but it piqued my interest because it focused on "things", how you defined them, and actions that you could execute around them. The very first iteration of Weaviate focused on exactly this: "Could Weave be used to define other things than IoT devices like transactions, or cars, or any other things?". In 2017 Google deprecated Weave and renamed Brillo to Android Things but the concept for Weaviate stayed.
+Weave是围绕Brillo构建的云应用程序，但它引起了我的兴趣，因为它专注于“物体”，以及如何定义它们以及围绕它们执行的操作。最初的Weaviate版本正是专注于这一点：“除了物联网设备，是否还可以使用Weave来定义其他事物，例如交易、汽车或其他任何事物？”。2017年，Google停用了Weave，并将Brillo更名为Android Things，但Weaviate的概念保留下来。
 
-From the get-go, I knew that the "things" in Weaviate should be connected to each other in graph format because I wanted to be able to represent the relationships between the data objects (rather than flat, row-based information) in an as simple and straightforward manner as possible.
+从一开始，我就知道Weaviate中的"事物"应该以图形格式相互连接，因为我希望能够尽可能简单明了地表示数据对象之间的关系，而不是以扁平的基于行的信息形式。
 
-> This search led to the RDF structure used by schema.org, which functioned as an inspiration for how to represent Weaviate's data objects.
+> 这个搜索过程导致了使用schema.org的RDF结构，这成为了如何表示Weaviate的数据对象的灵感来源。
 
-Weaviate is not per se RDF- or schema.org-based, but is definitely inspired by it. One of the most important upsides of this approach was that we could use GraphQL (the graph query language which was entering the software stage through Facebook open-sourcing it) to represent the data inside Weaviate.
+Weaviate并不是严格意义上的基于RDF或schema.org的，但是肯定受到了它们的启发。采用这种方法最重要的优点之一是我们可以使用GraphQL（这是一种由Facebook开源的图查询语言）来表示Weaviate内部的数据。
 
-With the concept of realtime vectorization of data objects and RDF-like representation of Weaviate objects in GraphQL, all the ingredients to turn Weaviate into the search graph that it currently is, were present.
+借助数据对象的实时矢量化概念以及在GraphQL中使用类似RDF的表示形式来表示Weaviate对象，Weaviate已经具备了将其转化为当前的搜索图的所有要素。
 
-## The Birth of the Weaviate Search Graph
-By the end of 2018, I entered Weaviate into a startup accelerator program in The Netherlands. A place where I had the time to build a team around Weaviate that could help get the software to production and create a business model around the open-source project (the startup became: SeMI Technologies, which is short for Semantic Machine Insights).
+## Weaviate搜索图的诞生
+到2018年底，我将Weaviate引入了荷兰的一个创业加速器计划。在那里，我有时间组建一个团队来帮助将软件投入生产，并在这个开源项目周围建立商业模式（这个创业公司被命名为SeMI Technologies，即语义机器洞察）。
 
-When the team started, Weaviate was more of a traditional graph where the semantic (NLP) element was a feature rather than the core architecture. But when we started to learn how powerful the out-of-the-box semantic search was and the role that embeddings play in day-to-day software development (i.e., a lot of machine learning models create embeddings as output), the team decided that we wanted to double down on the NLP part and vector storage, creating a unique open-source project, which could be used as a semantic search engine. The Weaviate Search Graph was born.
+当团队开始时，Weaviate更像是一个传统的图形，其中语义（NLP）元素是一个功能而不是核心架构。但是当我们开始了解到开箱即用的语义搜索有多么强大，以及嵌入向量在日常软件开发中的作用（即很多机器学习模型的输出是嵌入向量），团队决定加强NLP部分和向量存储，创建一个独特的开源项目，可以用作语义搜索引擎。Weaviate搜索图应运而生。
 
-## How people use it today
-One of the coolest things about an open-source community and users of the software is to see how people use it and what trends you can see emerge around implementations. The core features of Weaviate are the semantic search element and the semantic classification, which are used in a variety of ways and industries.
+## 今天人们如何使用它
 
-Examples of implementations include: classification of invoices into categories, searching through documents for specific concepts rather than keywords, site search, product knowledge graphs, and many other things.
+开源社区和软件用户最酷的事情之一就是看到人们如何使用它以及在实现过程中出现的趋势。Weaviate的核心功能是语义搜索和语义分类，它们在各种方式和行业中被广泛使用。
 
-## The Future
-Weaviate will stay fully open source for the community to use. The team is growing to accelerate building Weaviate and supporting users. We are releasing new features very frequently, like new vector indices and search pipeline features, and Weaviate Cloud Services and Weaviate Console.
+实现的例子包括：将发票分类到各个类别中，通过概念而不是关键词在文档中进行搜索，网站搜索，产品知识图谱等等。
 
-![Weaviate Console](./img/weaviate-console.jpeg)
+## 未来展望
+Weaviate将完全开源，供社区使用。团队正在壮大，加速构建Weaviate并支持用户。我们经常发布新功能，如新的向量索引和搜索管道功能，以及Weaviate云服务和Weaviate控制台。
 
-## Listen to Bob's story at the Open Source Data
-Want to learn more about the background of Vector Search and how the ecosystem is developing? [Listen to Sam Ramji from DataStax interviewing Bob van Luijt about Vector Search and the AI stack.](https://www.datastax.com/resources/podcast/vector-search-ai-stack-more-bob-van-luijt).
+![Weaviate控制台](./img/weaviate-console.jpeg)
 
+## 在开源数据上听Bob的故事
+想了解更多关于向量搜索的背景和生态系统的发展情况吗？[请听DataStax的Sam Ramji采访Bob van Luijt关于向量搜索和AI堆栈的内容。](https://www.datastax.com/resources/podcast/vector-search-ai-stack-more-bob-van-luijt)。
 
 import WhatNext from '/_includes/what-next.mdx'
 
