--- a/blog/2022-09-21-weaviate-1-15-1-release/index.mdx
+++ b/blog/2022-09-21-weaviate-1-15-1-release/index.mdx
@@ -1,65 +1,69 @@
 ---
-title: Weaviate 1.15.1 patch release
-slug: weaviate-1-15-1-release
-authors: [etienne]
+authors:
+- etienne
 date: 2022-09-21
-tags: ['release']
+description: Two weeks after the 1.15 release, we have a patch (v1.15.1) release for
+  you, which brings 15 bug fixes and 2 UX improvements.
 image: ./img/hero.png
-description: "Two weeks after the 1.15 release, we have a patch (v1.15.1) release for you, which brings 15 bug fixes and 2 UX improvements."
+slug: weaviate-1-15-1-release
+tags:
+- release
+title: Weaviate 1.15.1 patch release
 ---
-![Weaviate 1.15.1 patch release](./img/hero.png)
 
-<!-- truncate -->
+![Weaviate 1.15.1 补丁发布](./img/hero.png)
 
-We usually wouldn't write a whole blog post about a patch release. But when I chatted with Sebastian (the regular author of our "big" release blog posts series), about the contents of Weaviate `v1.15.1` patch, we quickly realized that this release is too important to end up as a [side note](https://github.com/weaviate/weaviate/releases/tag/v1.15.1) somewhere.
+<!-- 截断 -->
 
-So, instead, I have the pleasure of introducing you to the latest patch release. Two weeks after the [v1.15.0 release, which introduced backups and more](/blog/weaviate-1-15-release), we fixed over **15** bugs.
+通常我们不会为一个补丁发布写一篇完整的博文。但是当我与 Sebastian（我们“大”版本发布博文系列的常规作者）聊到 Weaviate `v1.15.1` 补丁的内容时，我们很快意识到这个发布太重要了，不能被当作一个[侧记](https://github.com/weaviate/weaviate/releases/tag/v1.15.1)放在某个地方。
 
-In summary, this release addresses fixes and improvements around:
+因此，我很高兴向您介绍最新的补丁版本。在[引入备份等功能的v1.15.0版本](/blog/weaviate-1-15-release)两周后，我们修复了超过15个错误。
 
-* [Indexing](#indexing-bug-fixes) – for vector and object/inverted stores
-* [Sorting](#sorting)
-* [Aggregation](#aggregation)
-* [Stability](#stability)
-* [UX](#ux-fixes)
+总的来说，此版本解决了以下方面的修复和改进：
 
-## Indexing bug fixes
-This started as a single bug investigation, but quickly this led to a discovery of five others. There was an issue when trying to update objects without vectors, but then you would add a vector later. That could lead to cryptic error messages like **"incompatible vector dimensions: 0 vs. 128"**. We were able to narrow this down to an issue in Weaviate's LSM store implementation, but we found five other bugs when we fixed the problem. Among them:
+* [索引](#indexing-bug-fixes) - 针对向量和对象/倒排存储
+* [排序](#sorting)
+* [聚合](#aggregation)
+* [稳定性](#stability)
+* [用户体验](#ux-fixes)
 
-* an issue where a PATCH update could break the inverted index or geo props
-* an issue where concurrent updates and deletes on the HNSW index would lead to errors
-* an issue where the user would receive a cryptic error message "entry point deleted - will be cleaned up in the next cycle"
-* out-of-index panics in the HNSW index
+## 索引错误修复
+这起初只是一个单一的错误调查，但很快发现了其他五个问题。在尝试更新没有向量的对象时出现了一个问题，但稍后添加了一个向量。这可能导致类似于**"不兼容的向量维度：0 vs. 128"**的隐晦错误消息。我们能够将这个问题缩小到Weaviate的LSM存储实现中的一个问题，但在解决这个问题时我们发现了其他五个错误。其中包括：
 
-In short, these fixes make indexing more stable, prevent degrading both the vector and inverted indexes over time, and ensure updates are reflected correctly. If you want to dig deeper, here is the [actual changelist](https://github.com/weaviate/weaviate/pull/2191).
+* 修复了 PATCH 更新可能导致倒排索引或地理属性破坏的问题
+* 修复了 HNSW 索引上并发更新和删除可能导致错误的问题
+* 修复了用户可能收到含糊不清的错误消息 "entry point deleted - will be cleaned up in the next cycle" 的问题
+* 修复了 HNSW 索引中的超出索引范围的 panic 错误
 
-## Sorting
-We added support for sorting in Weaviate `v1.13`, which has been a popular feature. Instead of just sorting by one property, Weaviate lets you sort by any number of properties. The idea is that if the values for the first property are identical, Weaviate uses the second property to determine the order. There was a bug that occurred when you would specify multiple sorting properties in combination with a limit. You could end up in a situation where some results were missing. The new release fixes the sorting implementation and ensures that results are in the correct order and the limit is applied at the very end. This way, no more results can be missing because of sorting. While we were at it, we added plenty of new tests to prevent future regressions.
+简而言之，这些修复使得索引更加稳定，防止向量和倒排索引随时间的推移而降低，并确保更新正确地反映出来。如果你想深入了解，这里是[实际的变更列表](https://github.com/weaviate/weaviate/pull/2191)。
 
-👏Big thanks to our community user **Patrice Bourgougnon** – the creator of the [WPSolr plugin](https://www.wpsolr.com/) – for spotting this issue.
+## 排序
+我们在Weaviate `v1.13`中添加了对排序的支持，这是一个受欢迎的功能。与仅按照一个属性进行排序不同，Weaviate允许您按照任意数量的属性进行排序。这样做的想法是，如果第一个属性的值相同，Weaviate将使用第二个属性来确定顺序。在指定多个排序属性与限制结合使用时，可能会出现一个bug。您可能会遇到一些结果缺失的情况。新版本修复了排序实现，并确保结果按正确的顺序排列，并且限制应用在最后。这样，由于排序的原因，不会再出现结果缺失的情况。在这个过程中，我们添加了大量的新测试，以防止未来的回归。
 
-## Aggregation
-The previous release already contained substantial performance improvements for (filtered) aggregations. This patch release goes one step further. We fixed seven issues where an aggregation would return incorrect results or an error. We have fixed calculation mode and median, cross-reference aggregations, filtered-date aggregations, and issues with multi-shard aggregations. If you want to dig deeper, here is the [pull request that introduces all seven fixes](https://github.com/weaviate/weaviate/pull/2192).
+👏 非常感谢我们社区用户**Patrice Bourgougnon** - [WPSolr插件](https://www.wpsolr.com/)的创建者 - 发现了这个问题。
 
-## Stability
-A rare but critical bug occurred when running specific filtered vector searches while running updates. This bug turned out to be a hidden data race between the filtering logic and a compaction process due to unsafe usage of data. The fix was simple; the affected byte array needed to be copied instead of referenced. We added [a new stress test pipeline](https://github.com/weaviate/weaviate-chaos-engineering/pull/11) to prove that the bug is fixed and prevent future regressions.
+## 聚合
+先前的版本已经包含了对（筛选）聚合性能的大幅改进。这个补丁版本更进一步。我们修复了七个问题，其中聚合会返回不正确的结果或错误。我们修复了计算模式和中位数、交叉引用聚合、筛选日期聚合以及多分片聚合的问题。如果您想深入了解，这里是[引入了这七个修复的拉取请求](https://github.com/weaviate/weaviate/pull/2192)。
 
-👏Big thanks to our community user **Juraj Bezdek** – who builds [labelator.io](https://www.labelator.io/), which uses Weaviate under the hood. He initially spotted this issue and helped us narrow it down. It was a great example of collaboration with our community, leading to a much faster fix for this critical issue.
+## 稳定性
+在运行更新时，特定的筛选向量搜索发生了一个罕见但关键的 bug。这个 bug 最终被发现是筛选逻辑和压缩过程之间的隐藏数据竞争，由于数据的不安全使用引起的。修复方法很简单，受影响的字节数组需要被复制而不是被引用。我们添加了[一个新的压力测试流水线](https://github.com/weaviate/weaviate-chaos-engineering/pull/11)来证明这个 bug 已经修复，并防止未来的回归。
 
-## UX fixes
-This patch release also introduces a couple of great UX fixes, which are sure you will appreciate.
+👏特别感谢我们社区用户**Juraj Bezdek** - 他构建了[labelator.io](https://www.labelator.io/)，该应用程序在内部使用Weaviate。他最初发现了这个问题，并帮助我们缩小了范围。这是与我们社区合作的一个很好的例子，为解决这个关键问题提供了更快的修复。
 
-We improved what happens when you delete a class that had incoming references from other classes. Previously a long and cryptic error message was displayed, and unless you also deleted the referenced classes, the GraphQL API would not have been functional. [The fix](https://github.com/weaviate/weaviate/pull/2189) handles this situation much more gracefully. The cryptic error is gone and the GraphQL API stays functional. The invalid reference prop is simply skipped.
+## 用户体验修复
+这个补丁版本还引入了一些很棒的用户体验修复，相信您会很喜欢。
 
-When importing null properties into Weaviate before this release,  it would make a difference whether you would leave out a property or explicitly set it to null. That is now fixed, and both situations behave the same.
+我们改进了删除一个被其他类引用的类时的处理方式。之前会显示一个冗长和晦涩的错误信息，除非您还删除了被引用的类，否则GraphQL API将无法正常工作。[修复](https://github.com/weaviate/weaviate/pull/2189)更加优雅地处理了这种情况。晦涩的错误信息已经消失，GraphQL API仍然正常工作。无效的引用属性会被简单地跳过。
 
-Last but not least, there were two situations where Weaviate did not properly propagate error messages to the user in specific cases; in the GCP backup backend and the new Hugging Face module. We have fixed them both.
+在此版本之前，当将空属性导入到Weaviate时，忽略属性和明确将其设置为null之间存在差异。现在已经修复，两种情况行为相同。
 
-## Conclusion: Now is the best time to upgrade
-Even just two weeks after the `v1.15.0` release, this new `v1.15.1` release is full of improvements. There is something for everyone, whether for increased stability, improved behavior, or better UX. The latest release contains over 15 bug fixes compared to the previous one. Now I believe that's a great reason to update right away.
+最后，Weaviate在特定情况下未能正确向用户传播错误消息，包括在GCP备份后端和新的Hugging Face模块中。我们已经修复了这两个问题。
 
-## Enjoy
-We hope you enjoy the `v1.15.1` patch release, with bug fixes and UX improvements making this the best Weaviate release yet!🔥
+## 结论：现在是升级的最佳时机
+即使在`v1.15.0`版本发布仅仅两周后，这个新的`v1.15.1`版本也充满了改进。不管是提高稳定性、改进行为还是提升用户体验，都有所涉及。与之前版本相比，最新版本修复了超过15个错误。现在，我相信这是立即更新的一个很好的理由。
+
+## 享受吧
+我们希望您喜欢`v1.15.1`补丁版本，其中包含了错误修复和用户体验改进，使之成为迄今为止最好的Weaviate版本！🔥
 
 import ShareFeedback from '/_includes/share-feedback.md';
 
