--- a/blog/2022-12-12-cohere-multilingual-with-weaviate/index.mdx
+++ b/blog/2022-12-12-cohere-multilingual-with-weaviate/index.mdx
@@ -1,74 +1,78 @@
 ---
-title: Cohere Multilingual ML Models with Weaviate
-slug: cohere-multilingual-with-weaviate
-authors: [sebastian]
+authors:
+- sebastian
 date: 2022-12-12
-tags: ['integrations']
+description: Cohere announced the release of the text-understanding multilingual model.
+  Learn how to use it in Weaviate.
 image: ./img/hero.png
-description: "Cohere announced the release of the text-understanding multilingual model. Learn how to use it in Weaviate."
+slug: cohere-multilingual-with-weaviate
+tags:
+- integrations
+title: Cohere Multilingual ML Models with Weaviate
 ---
-![Cohere Multilingual ML Models with Weaviate](./img/hero.png)
 
-<!-- truncate -->
+![Cohere多语言机器学习模型与Weaviate集成](./img/hero.png)
 
-## Intro
-Natural Language Processing (NLP) has enabled computers to understand the human language. It has shifted the way humans build and interact with computers. Large Language Models (LLMs) underpin the latest developments in NLP and have gained traction in various applications. [Cohere](https://cohere.com/) is an AI platform that provides its users with access to its LLMs. Cohere gives developers and businesses the ability to implement NLP as part of their toolkit.
+<!-- 省略部分 -->
 
-Cohere trains their own LLMs for text generation and understanding and serves them via API. You can think of it as a managed LLM service in the cloud, with the ability to customize/finetune them on your dataset.
+## 简介
+自然语言处理（NLP）使计算机能够理解人类语言。它改变了人类构建和与计算机交互的方式。大型语言模型（LLMs）是自然语言处理最新发展的基础，并在各种应用中受到推崇。[Cohere](https://cohere.com/)是一个提供LLMs访问权限的人工智能平台。Cohere使开发人员和企业能够将NLP作为其工具包的一部分实施。
+
+Cohere通过训练自己的LLM来进行文本生成和理解，并通过API提供服务。您可以将其视为云中的托管LLM服务，具有在您的数据集上自定义/微调的能力。
 
 ## Cohere + Weaviate
-Now, you can combine Cohere’s LLMs with a vector database like Weaviate to get the best of both worlds. More specifically, you can run complex NLP queries at a large scale of millions (and even billions) of text objects and get results back in a blink of an eye.
+现在，您可以将Cohere的LLM与Weaviate等向量数据库相结合，以兼顾两者的优势。更具体地说，您可以在数百万甚至数十亿个文本对象上运行复杂的NLP查询，并在眨眼之间获得结果。
 
-> If you don’t consider a "blink of an eye" as a scientific metric (note: it isn’t!), you can check Weaviate’s [benchmarks](/developers/weaviate/benchmarks/ann#results) on some standard datasets.
+> 如果您不把“眨眼之间”视为科学指标（请注意：它并不是！），您可以查看Weaviate在一些标准数据集上的[基准测试结果](/developers/weaviate/benchmarks/ann#results)。
 
-But until now, getting outputs from Cohere into Weaviate required a few extra steps. This included sending requests to Cohere to vectorize text objects, retrieving the output vectors, and then importing it  into Weaviate along with the matching objects.
+但是直到现在，将Cohere的输出导入到Weaviate还需要一些额外的步骤。这包括向Cohere发送请求以将文本对象转化为向量，检索输出向量，然后与匹配的对象一起将其导入到Weaviate中。
 
 ### Text2vec-cohere
-Over the last few weeks, we’ve partnered with Cohere to create a new Weaviate module – [text2vec-cohere](/developers/weaviate/modules/retriever-vectorizer-modules/text2vec-cohere) – it allows you to use Cohere’s LLMs to run complex NLP queries straight from Weaviate.
+在过去的几周里，我们与Cohere合作，创建了一个新的Weaviate模块 - [text2vec-cohere](/developers/weaviate/modules/retriever-vectorizer-modules/text2vec-cohere) - 它允许您直接从Weaviate使用Cohere的LLMs来运行复杂的NLP查询。
 
-You can learn all about [text2vec-cohere from the docs](/developers/weaviate/modules/retriever-vectorizer-modules/text2vec-cohere).
+您可以从文档中了解有关[text2vec-cohere的所有信息](/developers/weaviate/modules/retriever-vectorizer-modules/text2vec-cohere)。
 
-And there is a **lot** that you can do with Cohere, including some very new, exciting developments. **drumroll** 🥁
+Cohere有很多功能，包括一些非常新颖和令人兴奋的发展。**鼓点** 🥁
 
-## Text-understanding multilingual model
-Today, Cohere announced the release of the [text-understanding multilingual model](https://txt.cohere.com/multilingual) that supports 100+ languages.
+## 文本理解多语言模型
+今天，Cohere宣布发布了支持100多种语言的[文本理解多语言模型](https://txt.cohere.com/multilingual)。
 
-The multilingual model is perfect for search, content aggregation and recommendation, and zero-shot cross-lingual text classification.
+这个多语言模型非常适用于搜索、内容聚合和推荐，以及零-shot跨语言文本分类。
 
-There are so many great use cases:
-Search through a multilingual forum for answers in one language, then use browser translation to output the content in the same language.
-Search through your resources, documentation, etc., in the readers’ native language.
-Enable product search in the language(s) that your users are comfortable with.
+有很多很棒的使用案例：
+通过多语言论坛搜索答案，并使用浏览器翻译将内容输出为同一语言。
+在读者的母语中搜索资源、文档等。
+在用户熟悉的语言中启用产品搜索。
 
-## Multilingual model quick test
-After learning from our friends at Cohere that the model can handle over a hundred human languages, I was eager to test it out and see what I could achieve by running a few queries in different languages.
+## 多语言模型快速测试
+从Cohere的朋友那里得知这个模型可以处理100多种人类语言后，我迫不及待地想要测试一下，并通过在不同语言中运行一些查询来看看我能取得什么成果。
 
-So, I’ve created a small dataset with a few objects with descriptions of animals (squirrels, horses, meerkats, etc.), musical instruments, and vehicles. The descriptions for half of the objects are in English, but the remaining objects are written in other languages like German, Italian, Swedish, Spanish etc.
+因此，我创建了一个小型数据集，其中包含一些动物（松鼠、马、猫鼬等）、乐器和交通工具的描述。一半的对象描述是用英语编写的，但剩下的对象描述则使用其他语言，如德语、意大利语、瑞典语、西班牙语等。
 
-Then, I took 15 minutes to create a small [Python project](https://github.com/weaviate-tutorials/cohere-wiki-multilingual/). It includes two Jupyter Notebooks to [import data](https://github.com/weaviate-tutorials/cohere-wiki-multilingual/blob/main/wiki-large-setup.ipynb) and [query articles](https://github.com/weaviate-tutorials/cohere-wiki-multilingual/blob/main/wiki-large-query.ipynb).
+然后，我花了15分钟创建了一个小型的[Python项目](https://github.com/weaviate-tutorials/cohere-wiki-multilingual/)。它包括两个Jupyter Notebook，用于[导入数据](https://github.com/weaviate-tutorials/cohere-wiki-multilingual/blob/main/wiki-large-setup.ipynb)和[查询文章](https://github.com/weaviate-tutorials/cohere-wiki-multilingual/blob/main/wiki-large-query.ipynb)。
 
-To follow along, you should:
-1. set up a new Weaviate instance in [WCS](https://console.weaviate.cloud)
-1. request a [Cohere API key](https://dashboard.cohere.com/api-keys)
+要跟随操作，您应该：
+1. 在[WCS](https://console.weaviate.cloud)中设置一个新的Weaviate实例
+1. 请求一个[Cohere API密钥](https://dashboard.cohere.com/api-keys)
 
-Then, the notebooks show you how to:
-1. configure data schema to use the Cohere `multilingual-22-12` model
-1. and import a small (handcrafted) dataset.
+然后，这些笔记本将向您展示如何：
+1. 配置数据模式以使用Cohere的`multilingual-22-12`模型
+2. 导入一个小的（手工制作的）数据集。
 
-### Query for musical instruments
-Once my setup was ready, I was able to run queries like "What musical instruments do we have?" in Polish
+### 查询乐器
+一旦我的设置准备好了，我就能够在波兰语中运行像“我们有哪些乐器？”这样的查询。
 
 ```bash
 python query.py "jakie mamy instrumenty muzyczne?"
 ```
 
-Or a shorter query in Hungarian – "musical instruments?"
+或者用匈牙利语提出一个更简短的查询 - "乐器？"
 
 ```bash
 python query.py "zenei hangszerek?"
 ```
 
-Both queries returned the following objects. Note the guitar content is in Italian, while the Drum content is in English.
+两个查询返回了以下对象。请注意，吉他内容是用意大利语编写的，而鼓内容是用英语编写的。
 
 ```json
 [{
@@ -91,14 +95,14 @@ Both queries returned the following objects. Note the guitar content is in Itali
 }]
 ```
 
-### Query for small animals
-Next, I tried to query for "small animals" in Japanese.
+### 查询小动物
+接下来，我尝试在日语中查询"小动物"。
 
 ```bash
 python query.py "小動物"
 ```
 
-Which returned three objects about meerkats (each in a different language) and one about squirrels.
+返回了三个关于猫鼬（每个使用不同语言）的对象，以及一个关于松鼠的对象。
 
 ```json
 [{
@@ -124,23 +128,23 @@ Which returned three objects about meerkats (each in a different language) and o
 }]
 ```
 
-### Test conclusion
-Even though this was just a small test, the results I received back are great. I never thought it would be this easy to search across documents that are written in different languages.
+### 测试结论
+尽管这只是一个小测试，但我得到的结果非常好。我从来没有想过在不同语言编写的文档中进行搜索会如此简单。
 
-Over the Christmas break, I will take some time to build a larger app to more thoroughly test the Weaviate + Cohere combo. Something that will come with more data and test for more complex queries and scenarios. 😉
+在圣诞假期期间，我会花些时间构建一个更大的应用程序，对Weaviate + Cohere组合进行更全面的测试。这个应用程序将拥有更多的数据，并测试更复杂的查询和场景。😉
 
-If you have interesting data project ideas, give me a shout on [Weaviate community Slack](https://weaviate.io/slack) or via [Twitter @sebawita](https://twitter.com/sebawita).
+如果您有有趣的数据项目想法，请在[Weaviate社区的Slack](https://weaviate.io/slack)上联系我，或通过[Twitter @sebawita](https://twitter.com/sebawita)与我联系。
 
 
-### Project in GitHub
+### GitHub上的项目
 
-You can find the test project on [GitHub](https://github.com/weaviate-tutorials/cohere-multilingual-test). Follow the readme instructions on how to set it up for yourself.
+您可以在[GitHub](https://github.com/weaviate-tutorials/cohere-multilingual-test)上找到测试项目。按照自述文件中的说明设置它以便您使用。
 
-Probably the most interesting part is the [query code](https://github.com/weaviate-tutorials/cohere-multilingual-test/blob/main/_tools.py), which is made of 3 parts:
+可能最有趣的部分是[查询代码](https://github.com/weaviate-tutorials/cohere-multilingual-test/blob/main/_tools.py)，它由3个部分组成：
 
-* `nearText` – parameters where we pass in the query from the user
-* `properties` – a list of properties we want back from the database
-* `client.query` – it takes the above two, and runs a semantic search. Note, how it doesn’t even mention the Cohere model, as all of that is done through configuration.
+* `nearText` - 我们从用户传入的查询参数
+* `properties` - 我们想要从数据库中返回的属性列表
+* `client.query` - 它接受上述两个参数，并运行语义搜索。注意，它甚至不提到Cohere模型，因为所有这些都通过配置完成。
 
 ```python
 def semantic_serch(query):
@@ -166,52 +170,53 @@ def semantic_serch(query):
 
    return result['data']['Get']['Document']
 ```
-## How does this work
-It is also important to understand how Weaviate and Cohere communicate with each other.
+## 工作原理
 
-Weaviate fully automates communication with Cohere’s AI Platform. There are two key scenarios when Weaviate will communicate with Cohere:
+了解Weaviate和Cohere是如何相互通信的也非常重要。
 
-* Data import and modifications – to vectorize data objects
-* Query time – to vectorize the query
+Weaviate完全自动化与Cohere的AI平台进行通信。在以下两种关键情况下，Weaviate将与Cohere进行通信：
 
-### Data import + modifications
-When you import (or update) data into Weaviate, Weaviate will:
-1. Receive the data object
-1. Send the relevant properties for vectorization to Cohere
-1. Store the data object and index the vector in Weaviate
+* 数据导入和修改 - 将数据对象转化为向量
+* 查询时 - 将查询转化为向量
 
-![Weaviate Import with Cohere](./img/cohere-import.png)
+### 数据导入和修改
+当您将数据导入（或更新）到Weaviate时，Weaviate将：
+1. 接收数据对象
+1. 将与向量化相关的属性发送给Cohere
+2. 将数据对象存储并在Weaviate中索引向量
 
-This allows Weaviate to efficiently store and query your data.
+![使用Cohere导入Weaviate](./img/cohere-import.png)
 
-### Query
-When you query Weaviate, Weaviate will:
-1. Receive the query
-1. Send the query to Cohere to vectorize it
-1. Use the returned query vector and search in the vector index
-1. Return matched objects
+这样可以让Weaviate高效地存储和查询您的数据。
 
-![Weaviate Query with Cohere](./img/cohere-query.png)
+### 查询
+当您查询Weaviate时，Weaviate将会：
+1. 接收查询请求
+2. 将查询请求发送给Cohere进行向量化处理
+3. 使用返回的查询向量在向量索引中进行搜索
+4. 返回匹配的对象
 
-This shows a clear separation of roles:
-* `Cohere` – takes care of vectorizing the data, with the power of Large Language Models
-* `Weaviate` – orchestrates the process, stores the data and vectors, and provides production-ready performance.
+![使用Cohere进行Weaviate查询](./img/cohere-query.png)
 
-### Full CRUD support
-It is worth knowing that Weaviate allows you to continuously modify the data whilst the database remains operational at all times. Exactly what you would expect from any database.
+这显示了明确的角色分工:
+* `Cohere` - 负责将数据向量化，利用大型语言模型的能力
+* `Weaviate` - 协调整个过程，存储数据和向量，并提供可投入生产的性能。
 
-Every time you add new or modify existing objects, Weaviate will obtain new vectors from Cohere and store them with their objects. And if you delete any objects, then Weaviate removes their corresponding vectors from the index.
+### 完整的CRUD支持
+值得注意的是，Weaviate允许您在数据库始终运行的情况下不断修改数据。这正是您对任何数据库的期望。
 
-The best thing is, from the query or data modifications point of view, you don’t need to do anything about the Weaviate ⇔ Cohere coordination.
+每当您添加新的对象或修改现有对象时，Weaviate将从Cohere获取新的向量，并将它们与对象一起存储。如果删除任何对象，Weaviate将从索引中删除相应的向量。
 
-## What next
-Check out the [text2vec-cohere](/developers/weaviate/modules/retriever-vectorizer-modules/text2vec-cohere) to learn more about the new module.
+最好的是，从查询或数据修改的角度来看，您无需对Weaviate ⇔ Cohere的协调做任何操作。
 
-If you are new to Weaviate, check out the [getting started guide](/developers/weaviate/quickstart).
+## 下一步怎么办
+查看[text2vec-cohere](/developers/weaviate/modules/retriever-vectorizer-modules/text2vec-cohere)以了解更多关于这个新模块的信息。
 
-Let us know if you found this article interesting or useful. We are always happy to receive constructive feedback. 😀
+如果您是Weaviate的新用户，请查看[快速入门指南](/developers/weaviate/quickstart)。
 
-We are always working on new articles and are looking for new topics. Let us know if there is anything that you would like us to write about. 🤗
+如果您觉得本文有趣或有用，请告诉我们。我们非常乐意接收建设性的反馈。😀
+
+我们始终在撰写新的文章，并寻找新的主题。如果您有任何想让我们撰写的内容，请告诉我们。🤗
 
 import ShareFeedback from '/_includes/share-feedback.md';
 
