--- a/blog/2023-01-03-hybrid-search-explained/index.mdx
+++ b/blog/2023-01-03-hybrid-search-explained/index.mdx
@@ -1,83 +1,86 @@
 ---
-title: Hybrid Search Explained
-slug: hybrid-search-explained
-authors: [erika]
+authors:
+- erika
 date: 2023-01-03
-tags: ['concepts', 'search']
+description: Learn about the new hybrid search feature that enables you to combine
+  dense and sparse vectors to deliver the best of both search methods.
 image: ./img/hero.png
-description: "Learn about the new hybrid search feature that enables you to combine dense and sparse vectors to deliver the best of both search methods."
+slug: hybrid-search-explained
+tags:
+- concepts
+- search
+title: Hybrid Search Explained
 ---
-![Hybrid search](./img/hero.png)
+
+![混合搜索](./img/hero.png)
 
 <!-- truncate -->
 
-Hybrid search is a technique that **combines** multiple search algorithms to improve the accuracy and relevance of search results. It uses the best features of both keyword-based search algorithms with vector search techniques. By leveraging the strengths of different algorithms, it provides a more effective search experience for users.
+混合搜索是一种将多个搜索算法结合起来，以提高搜索结果的准确性和相关性的技术。它同时利用了基于关键字的搜索算法和向量搜索技术的优点。通过充分利用不同算法的优势，它为用户提供了更有效的搜索体验。
 
-The [Hybrid search](/developers/weaviate/api/graphql/vector-search-parameters#hybrid) feature was introduced in Weaviate 1.17. It uses sparse and dense vectors to represent the meaning and context of search queries and documents.
+[混合搜索](/developers/weaviate/api/graphql/vector-search-parameters#hybrid) 功能在 Weaviate 1.17 版本中引入。它使用稀疏和密集向量来表示搜索查询和文档的含义和上下文。
 
-In this blog post, you will learn about the implementation of hybrid search in Weaviate and how to use it.
+在本博文中，您将了解到在 Weaviate 中实现混合搜索的方法以及如何使用它。
 
-## Sparse and Dense Vectors
-Sparse and dense vectors are calculated with distinct algorithms. Sparse vectors have mostly zero values with only a few non-zero values, while dense vectors mostly contain non-zero values. Sparse embeddings are generated from algorithms like [BM25](https://en.wikipedia.org/wiki/Okapi_BM25) and [SPLADE](https://arxiv.org/abs/2107.05720). Dense embeddings are generated from machine learning models like [GloVe](https://text2vec.org/glove.html) and [Transformers](https://huggingface.co/docs/transformers/index).
+## 稀疏向量和密集向量
+稀疏向量和密集向量使用不同的算法进行计算。稀疏向量大部分数值为零，只有少数非零数值，而密集向量大部分包含非零数值。稀疏嵌入是通过诸如[BM25](https://en.wikipedia.org/wiki/Okapi_BM25)和[SPLADE](https://arxiv.org/abs/2107.05720)等算法生成的。密集嵌入是通过诸如[GloVe](https://text2vec.org/glove.html)和[Transformers](https://huggingface.co/docs/transformers/index)等机器学习模型生成的。
 
-Note, the current implementation of hybrid search in Weaviate uses BM25/BM25F and vector search.
+注意，Weaviate中混合搜索的当前实现使用了BM25/BM25F和向量搜索。
 
-If you’re interested to learn about how dense vector indexes are built and optimized in Weaviate, check out this [article](/blog/why-is-vector-search-so-fast).
+如果您对Weaviate中如何构建和优化密集向量索引感兴趣，请查看这篇[文章](/blog/why-is-vector-search-so-fast)。
 
 ### BM25
-BM25 builds on the keyword scoring method [TF-IDF](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) (Term-Frequency Inverse-Document Frequency) by taking the [Binary Independence Model](https://en.wikipedia.org/wiki/Binary_Independence_Model) from the IDF calculation and adding a normalization penalty that weighs a document’s length relative to the average length of all the documents in the database.
+BM25基于关键词得分方法TF-IDF（Term-Frequency Inverse-Document Frequency）构建，通过采用IDF计算中的二进制独立模型（Binary Independence Model），并添加一个归一化惩罚，以衡量文档相对于数据库中所有文档的平均长度的长度。
 
-The image below presents the scoring calculation of BM25:
-![BM25 calculation](./img/BM25-calculation.png) <div align="center"><i>Source: Wikipedia page on Okapi BM25</i></div>
+下图展示了BM25的得分计算：
+![BM25计算](./img/BM25-calculation.png) <div align="center"><i>来源：维基百科关于Okapi BM25的页面</i></div>
 
-The score of the document, query pair is determined by weighing the uniqueness of each keyword in the query relative to the collection of texts. BM25 contains additional static parameters, k1 and b that may help calibrate performance to particular datasets.
+文档和查询的得分是通过对查询中每个关键词在文本集合中的唯一性进行加权来确定的。BM25包含额外的静态参数k1和b，可以帮助校准性能以适应特定的数据集。
 
 ### BM25F
-BM25F was also implemented in Weaviate `1.17`. BM25F is a variant of BM25 that allows multiple text fields per object to be given different weights in the ranking calculation. These weights are important for when fields in a document are more important than others. For example, a title may be given more weight than the abstract, since the title is sometimes more informative and concise. This type of weighting makes BM25F more flexible and customizable than BM25.
+在Weaviate `1.17`中还实现了BM25F。BM25F是BM25的一种变体，它允许每个对象的多个文本字段在排名计算中具有不同的权重。这些权重对于文档中的某些字段比其他字段更重要时非常重要。例如，标题可能比摘要更具信息量和简洁性，因此标题可能被赋予更高的权重。这种加权使得BM25F比BM25更加灵活和可定制。
 
-### Dense Vectors
-Dense vectors represent information stored in a database; this includes text, images, and other types of data. These embeddings are generated from machine learning models that convert data to vectors. The vectors are densely packed with information and are mostly made up of non-zero values. The meaning of each value in the vector depends on the machine learning model that you used.
+### 稠密向量
+密集向量表示数据库中存储的信息，包括文本、图像和其他类型的数据。这些嵌入是由将数据转换为向量的机器学习模型生成的。向量中的每个值都包含着丰富的信息，并且大多数值都是非零的。向量中每个值的含义取决于所使用的机器学习模型。
 
-Vector databases, like [Weaviate](/developers/weaviate/), store these embeddings and calculate the distance between the two vectors. [Distance metrics](/blog/distance-metrics-in-vector-search) show how similar or dissimilar two vector embeddings are. The search query is converted to a vector, similar to the data vectors, and the distance value determines how close the vectors are.
+向量数据库，如[Weaviate](/developers/weaviate/)，存储这些嵌入向量并计算两个向量之间的距离。[距离度量](/blog/distance-metrics-in-vector-search)显示了两个向量嵌入的相似性或不相似性。搜索查询被转换为一个向量，类似于数据向量，距离值确定向量之间的接近程度。
 
-![Hybrid Search](./img/hybrid-search-explained.png)
+![混合搜索](./img/hybrid-search-explained.png)
 
-## Hybrid Search Explained
-Hybrid search merges dense and sparse vectors together to deliver the best of both search methods. Generally speaking, dense vectors excel at understanding the context of the query, whereas sparse vectors excel at keyword matches. Consider the query, “How to catch an Alaskan Pollock”. The dense vector representation is able to disambiguate “catch” as meaning fishing rather than baseball or sickness. The sparse vector search will match the phrase “Alaskan Pollock” only. This example query shows where hybrid search combines the best of both sparse and dense vectors.
+## 混合搜索解释
+混合搜索将密集向量和稀疏向量合并在一起，以提供两种搜索方法的最佳效果。一般来说，密集向量在理解查询的上下文方面表现优异，而稀疏向量在关键词匹配方面表现优异。考虑查询“如何捕捉阿拉斯加鳕鱼”。密集向量表示能够将“捕捉”理解为钓鱼而不是棒球或疾病。稀疏向量搜索只会匹配短语“阿拉斯加鳕鱼”。这个示例查询展示了混合搜索如何将稀疏向量和密集向量的优势结合起来。
 
 
-## Reciprocal Rank Fusion (RRF)
+## 互倒排序融合（RRF）
 
-While researching hybrid search, we needed a way to combine the results of BM25 and dense vector search into a single ranked list. We came across a paper from Benham and Culpepper exploring rank fusion techniques. This paper analyzed seven strategies for combining the ranked results of two lists into a single ranking. We decided to start with the RRF score. The RRF score is calculated by taking the sum of the reciprocal rankings that is given from each list. By putting the rank of the document in the denominator, it penalizes the documents that are ranked lower in the list.
+在研究混合搜索时，我们需要一种将BM25和密集向量搜索结果合并为单个排序列表的方法。我们发现了Benham和Culpepper的一篇论文，探讨了排名融合技术。该论文分析了七种将两个列表的排名结果合并为单个排序的策略。我们决定从RRF分数开始。RRF分数是通过将每个列表中给出的倒数排名求和来计算的。通过将文档的排名放在分母中，它惩罚那些在列表中排名较低的文档。
 
 <p align="center"><img src="/img/blog/2023-01-03-hybrid-search-explained/RRF-calculation.png" alt="RRF Calculation" width="50%"/></p>
-<div align="center"> <i> Source: Benham and Culpepper 2017 </i> </div>
+<div align="center"> <i> 来源：Benham and Culpepper 2017 </i> </div>
 
+让我们来看一个例子。我们有三个标记为`A`、`B`和`C`的文档，并且运行了BM25和Dense搜索。在这个例子中，我们将常数*k*设置为0。
 
-Let's look at an example of this. We have three documents labeled `A`, `B`, and `C` and have run a BM25 and Dense search. In this example, we have set the constant *k* to 0.
-
-| BM25 Ranking | Dense Ranking | Results
+| BM25 排名 | Dense 排名 | 结果 |
 | --- | --- | --- |
 | A | B | A: 1/1 + 1/3 = 1.3 |
 | B | C | B: 1/2 + 1/1 = 1.5 |
 | C | A | C: 1/3 + 1/2 = 0.83|
 
-The above table shows the ranked order of the BM25 and Dense search. To fuse the two lists together, we need to take the sum of the reciprocal ranks. Based on the results, the top document is `Document B` with a ranking of 1.5, then `Document A` at 1.3, and `Document C` at 0.83.
+上表显示了BM25和密集搜索的排序顺序。要将两个列表合并在一起，我们需要计算倒数排名的总和。根据结果，排名第一的文档是`文档B`，排名为1.5，然后是排名为1.3的`文档A`，最后是排名为0.83的`文档C`。
 
-Re-ranking is a necessary step when implementing hybrid search. The alpha parameter dictates the weighting of each algorithm and determines the re-ranking of the results.
+在实现混合搜索时，重新排序是必要的一步。alpha参数决定了每个算法的权重，并确定结果的重新排序。
 
+## Weaviate用户体验
+要在Weaviate中使用混合搜索，只需确认您正在使用Weaviate `v1.17`或更高版本。您可以在GraphQL或其他各种客户端编程语言中运行混合查询。
 
-## Weaviate UX
-To use hybrid search in Weaviate, you only need to confirm that you’re using Weaviate `v1.17` or a later version. You can run the hybrid queries in GraphQL or the other various client programming languages.
+运行混合搜索查询需要五个参数（其中一些是可选的）：
+* `hybrid`: 表示您想使用混合搜索
+* `query`: 搜索查询
+* `alpha`（可选）：每个搜索算法的权重（alpha = 0（稀疏），alpha = 1（密集），alpha = 0.5（稀疏和密集的平等权重））
+* `vector`（可选）：可选提供自己的向量
+* `score`（可选）：关于稀疏和密集方法对结果的贡献的额外信息
 
-There are five parameters needed to run the hybrid search query (some are optional):
-* `hybrid`: shows that you want to use hybrid search
-* `query`: search query
-* `alpha`(optional): weighting for each search algorithm (alpha = 0 (sparse), alpha = 1 (dense), alpha = 0.5 (equal weight for sparse and dense))
-* `vector` (optional): optional to supply your own vector
-* `score`(optional): additional information on how much the sparse and dense method contributed to the result
-
-With just a few lines of code, you can start using hybrid search. You can run a test query in the [Weaviate console](https://link.weaviate.io/3JyBYZR) using GraphQL. The query is, “Fisherman that catches salmon” (similar to the example above). When we set the alpha to 0.5 it is equally weighing the dense and sparse vector results.
+只需几行代码，您就可以开始使用混合搜索。您可以在[Weaviate控制台](https://link.weaviate.io/3JyBYZR)中使用GraphQL运行测试查询。查询为“捕获鲑鱼的渔夫”（类似于上面的示例）。当我们将alpha设置为0.5时，它将等权重考虑密集向量和稀疏向量的结果。
 
 ```
 {
@@ -96,7 +99,7 @@ With just a few lines of code, you can start using hybrid search. You can run a 
 }
 ```
 
-Check out the [documentation](/developers/weaviate/api/graphql/vector-search-parameters#hybrid) for more information on hybrid search!
+查看[文档](/developers/weaviate/api/graphql/vector-search-parameters#hybrid)获取有关混合搜索的更多信息！
 
 
 import WhatNext from '/_includes/what-next.mdx'
