--- a/blog/2023-01-31-weaviate-podcast-search/index.mdx
+++ b/blog/2023-01-31-weaviate-podcast-search/index.mdx
@@ -1,26 +1,30 @@
 ---
-title: Weaviate Podcast Search
-slug: weaviate-podcast-search
-authors: [connor]
+authors:
+- connor
 date: 2023-01-31
-tags: ['how-to']
+description: Recent advances in AI are breathing new life into podcasting! The Whisper
+  speech-to-text model is a game-changer!
 image: ./img/hero.png
-description: "Recent advances in AI are breathing new life into podcasting! The Whisper speech-to-text model is a game-changer!"
+slug: weaviate-podcast-search
+tags:
+- how-to
+title: Weaviate Podcast Search
 ---
-![Weaviate Podcast Search](./img/hero.png)
 
-Recent advances in AI are breathing new life into podcasting! The Whisper speech-to-text model is a game-changer! It can transcribe podcasts with astonishing accuracy, allowing us to [index them into Weaviate](https://github.com/weaviate/weaviate-podcast-search)!
-I have been hosting the Weaviate podcast for a little over a year with 34 published episodes and am super excited to tell you how this will completely revamp our podcast, as well as the details behind how to build something like this for yourself.
+![Weaviate播客搜索](./img/hero.png)
+
+人工智能的最新进展为播客带来了新的活力！Whisper语音转文本模型是一个划时代的技术！它可以以惊人的准确性将播客转录成文本，让我们能够将它们[索引到Weaviate](https://github.com/weaviate/weaviate-podcast-search)中！
+我已经主持Weaviate播客一年多了，发布了34集节目，非常兴奋地告诉你这将如何彻底改变我们的播客，以及如何为自己构建类似的内容的详细信息。
 
 <!-- truncate -->
 
-Podcasts are easy to consume, we can listen to podcasts as we drive to work, take a walk, or play a video game. However, despite their convenience, podcasts have lacked a crucial aspect that other knowledge base mediums have - the ability to easily reference and search past content.
+播客易于消费，我们可以在开车上班、散步或玩游戏时听播客。然而，尽管它们很方便，但播客缺乏其他知识库媒体具备的一个关键方面 - 能够轻松引用和搜索过去的内容。
 
-So let’s dive into how to build it, see some queries, and then come back to how this will change podcasting!
+因此，让我们深入探讨如何构建它，看一些查询，并回顾这将如何改变播客！
 
 ## Whisper
 
-OpenAI has taken a swing at unleashing the potential of AI technology, breaking open a piñata of new applications. Among the bounty of treats spilling out, podcasting shines bright like a glittering candy! - Written by ChatGPT
+OpenAI已经尝试释放AI技术的潜力，打开了一个新应用的彩纸袋。在众多的好处中，播客就像闪闪发光的糖果一样耀眼！- 由ChatGPT撰写
 
 ```python
 !pip install git+https://github.com/openai/whisper.git
@@ -41,36 +45,36 @@ f.write(result["text"])
 f.close()
 ```
 
-From here you get a big text file from the podcast. So firstly, the obvious one is annotating who is speaking. Finally, although I am certainly in line to sing the praises of Whisper, some manual effort came in with reading through the podcasts to correct some things like “Weave8”, “Bird Topic”, and “HTTP scan”.
-I think it would be fairly easy to fine-tune Whisper on these corrections, but I think the bulk of the work is behind me now. However I imagine fine-tuning Whisper will be important to do for podcasts with hundreds of published episodes.
+从这里您可以从播客中获取一个大文本文件。首先，显而易见的是要标注谁在讲话。最后，尽管我肯定会赞美Whisper，但还是需要一些手动工作来阅读播客并纠正一些问题，比如“Weave8”，“Bird Topic”和“HTTP scan”。
+我认为对这些更正进行微调Whisper将会相当容易，但我认为大部分工作已经完成了。然而，我想微调Whisper对于拥有数百个发布剧集的播客来说是很重要的。
 
-![Podcast Search](./img/podcast-search.png)
+![播客搜索](./img/podcast-search.png)
 
-## Into Weaviate
-If you are already familiar with Weaviate, you can simply clone the repository [here](https://github.com/weaviate/weaviate-podcast-search) and get going with:
+## 进入Weaviate
+如果您已经熟悉Weaviate，您可以直接克隆此存储库[这里](https://github.com/weaviate/weaviate-podcast-search)，然后开始进行：
 
 ```bash
 docker-compose up -d
 python3 restore.py
 ```
 
-This will restore a backup that contains the data that has been uploaded and indexed in Weaviate.
+这将恢复一个包含已在Weaviate中上传和索引的数据的备份。
 
-In case this is your first time using Weaviate, check out the [Quickstart tutorial](/developers/weaviate/quickstart) to get started!
+如果这是您第一次使用Weaviate，请查看[快速入门教程](/developers/weaviate/quickstart)以开始使用！
 
-## Queries
+## 查询
 
-Now for the fun part, let’s answer some queries!!
+现在是有趣的部分，让我们回答一些查询吧！！
 
-| Query | Neural Search Pyramid |
+| 查询 | 神经搜索金字塔 |
 | --- | --- |
-| Top Result | Oh, yeah, that's an excellent question. And maybe I can also introduce, like I created this, you know, mental diagram for myself and I kept selling it everywhere and it seems like people get it and some of them even like to reach out on LinkedIn and say, hey, I got your vector search pyramid… **Dmitry Kan, #32** |
+| 最佳结果 | 哦，是的，这是一个非常好的问题。或许我可以介绍一下，我为自己创建了这个心智图，并且我不断地在各个地方推销它，看起来人们都明白了，并且有一些人甚至喜欢在LinkedIn上联系我，说，嘿，我得到了你的向量搜索金字塔... **Dmitry Kan，第32名** |
 
-| Query | Replication |
+| 查询 | 复制 |
 | --- | --- |
-| Top Result | Yeah, absolutely. So when I first started at the company, we had a milestone. It was like the last milestone of the roadmap, which was replication. And it seemed so far away, such a monumental task at the time, right? We didn't really have anything to support that at the time that I joined. So over time, we've built towards replication. For example, starting with backups, first, we introduced the ability to backup whatever's in your Weaviate instance, maybe on a single node. And then that evolved into distributed backups, which allows you to backup a cluster. And all of this was working towards the ability to automatically replicate or to support replication… **Parker Duckworth, #31** |
+| 最佳结果 | 是的，当我刚开始在公司工作时，我们设定了一个里程碑，即路线图的最后一个里程碑，即复制。当时看起来好像离我们很远，是一项巨大的任务，对吗？当我加入公司时，我们实际上没有任何支持这项任务的工具。随着时间的推移，我们逐渐朝着复制的目标努力。例如，我们从备份开始，首先引入了备份能力，可以备份您的Weaviate实例，可能是在单个节点上。然后，这一能力演变为分布式备份，允许您备份整个集群。所有这些工作都是为了实现自动复制或支持复制... **Parker Duckworth, #31** |
 
-We can get even better results by filtering our searches with the `speaker` and `podNum` properties. For example, you can filter search queries about You.com and Weaviate from Sam Bean like this:
+我们可以通过使用 `speaker` 和 `podNum` 属性来进一步提高搜索结果。例如，您可以按照以下方式过滤关于 Sam Bean、You.com 和 Weaviate 的搜索查询：
 
 ```graphql
 {
@@ -93,7 +97,7 @@ We can get even better results by filtering our searches with the `speaker` and 
 }
 ```
 
-We can also filter on podcast numbers. Weaviate podcast #30 “The Future of Search” with Bob van Luijt, Chris Dossman, and Marco Bianco was the first podcast to come out after ChatGPT was released!
+我们还可以根据播客编号进行筛选。Weaviate播客#30“搜索的未来”由Bob van Luijt、Chris Dossman和Marco Bianco主持，在ChatGPT发布后是第一个发布的播客节目！
 
 ```graphql
 {
@@ -116,57 +120,56 @@ We can also filter on podcast numbers. Weaviate podcast #30 “The Future of Sea
 }
 ```
 
-Using the `where` filter with hybrid search could improve the search results. This [feature](https://github.com/weaviate/weaviate/issues/2393) will be added to the Weaviate 1.18 release.
+使用`where`筛选器与混合搜索可以改善搜索结果。这个[功能](https://github.com/weaviate/weaviate/issues/2393)将会在Weaviate 1.18版本中添加。
 
-## The Future of Podcasting UX
+## Podcasting UX的未来
 
-So firstly, [Aleksa Gordcic](https://www.youtube.com/watch?v=dvNJX_YYtW8) beat me to the punch with his amazing [hubermantranscripts.com](https://www.hubermantranscripts.com/)! He even used Weaviate 🤣! I remember seeing something Dr. Huberman had recommended about sunlight exposure. I have recently moved from Florida to Boston and am a little bit worried about the shorter daylight. I also usually roll out of bed, stop at the coffee machine, and head to the computer (long live remote work!).
-I asked Aleksa’s app about sunlight exposure and boom I was able to instantly find this knowledge! Maybe time to switch up my morning routine!
+首先，[Aleksa Gordcic](https://www.youtube.com/watch?v=dvNJX_YYtW8) 在他令人惊叹的 [hubermantranscripts.com](https://www.hubermantranscripts.com/) 上击败了我！他甚至使用了 Weaviate 🤣！我记得在某个地方看到过 Huberman 博士推荐的有关日光暴露的内容。我最近从佛罗里达搬到了波士顿，有点担心白天变短。我通常从床上爬起来，去咖啡机旁边停一下，然后就开始工作了（远程办公万岁！）。
+我向Aleksa的应用程序询问了关于日光暴露的问题，哇，我立刻就能找到这个知识！也许是时候改变我的早晨日程了！
 
 ![Andrew Huberman Search](./img/andrew-huberman-search.png)
 
-In terms of the user experience for a **single podcast**... I think this is an incremental improvement over “chapter” annotations that allows  you to skip ahead on YouTube videos. That isn’t to undermine the improvement though; it is quite tedious to write detailed descriptions for each chapter. Plus long descriptions don't look so nice with YouTube’s Chapter interface.
+就**单个播客**的用户体验而言...我认为这是对“章节”注释的一种增量改进，允许您在YouTube视频中快速跳过。这并不是要贬低这种改进;为每个章节编写详细描述是相当繁琐的。而且，长描述在YouTube的章节界面上看起来不太好看。
 
-I think the real innovation in the podcasting user experience is in a **collection of podcasts**. A collection of podcasts now achieves knowledge base reference functionality, similar to code documentation or survey papers!
+我认为播客用户体验的真正创新在于**播客集合**。现在，一个播客集合可以实现类似于代码文档或综述论文的知识库参考功能！
 
-Further I think this will transform podcast **recommendation**. One way of doing this could be to use each chunk of a podcast to search across all the atomic chunks of other podcasts. Or we could construct a single embedding for the entire podcast episode.
-This is one of my favorite applications of our new [`ref2vec` module](/developers/weaviate/modules/retriever-vectorizer-modules/ref2vec-centroid). The first solution to ref2vec describes constructing Podcast – (hasSegment) → Segment cross-references, and then averaging the vectors of the segments to form the `Podcast` vector. We are exploring additional aggregation ideas as well such as:
+此外，我认为这将改变播客的**推荐**方式。一种方法是使用播客的每个片段来搜索其他播客的所有原子片段。或者我们可以为整个播客剧集构建一个统一的嵌入。
+这是我最喜欢的应用之一，使用我们的新 [`ref2vec` 模块](/developers/weaviate/modules/retriever-vectorizer-modules/ref2vec-centroid)。第一个 ref2vec 的解决方案描述了构建 Podcast - (hasSegment) → Segment 交叉引用，然后对片段的向量进行平均，形成 `Podcast` 向量。我们还在探索其他聚合思路，例如：
 
-* Ref2vec-centroids: Cluster the return multiple vectors<!-- TODO --> to represent `Podcast`. This also requires solving how we want to add multi-vector object representations to Weaviate.
+* Ref2vec-centroids: 对返回的多个向量进行聚类，以表示`Podcast`。这还需要解决如何将多向量对象表示添加到Weaviate中的问题。
 
-* Graph neural network aggregation: Graph neural networks are a perfect functional class for aggregating a variable amount of edges. For example one podcast may have 20 segments, and another one 35!
+* 图神经网络聚合: 图神经网络是聚合可变数量的边的理想函数类。例如，一个播客可能有20个片段，另一个可能有35个片段！
 
-* LLM Summarize: Parse through the referenced content and ask the LLM to write a summary of it, with the idea being we then embed this summary.
+* LLM Summarize: 解析引用的内容，并要求LLM写一个摘要，目的是将该摘要嵌入其中。
 
-Stay tuned for more updates on ref2vec!
+敬请期待ref2vec的更多更新！
 
 ## Dog-fooding
 
-“Dog-fooding” describes learning about your product by using it, as in eating your own dog food. There are 3 main features in development at Weaviate that I am super excited to work on, with the Weaviate Podcast serving as the dataset.
+“Dog-fooding”是指通过使用产品来了解产品的方式，就像吃自己的狗粮一样。在Weaviate的开发中，有3个主要功能我非常兴奋地要开发，并以Weaviate Podcast作为数据集。
 
-1. Weaviate’s `Generate` module
+1. Weaviate的`Generate`模块
 
-    Weaviate’s new `generate` module combines the power of Large Language Models, such as ChatGPT, with Weaviate! I don’t want to give away too much of this yet, but please stay tuned for Weaviate Air #5, for the celebration of this new Weaviate module and some trick shots using the Weaviate Podcast as the dataset!
+    Weaviate的新`generate`模块将强大的大型语言模型（如ChatGPT）与Weaviate相结合！我还不想透露太多细节，但请密切关注Weaviate Air＃5，庆祝这个新的Weaviate模块，并使用Weaviate Podcast作为数据集展示一些特技！
 
-2. Custom Models
+2. 自定义模型
 
-	Since joining Weaviate I have been fascinated with the conversation around zero-shot versus fine-tuned embedding models. Particularly from my conversation with Nils Reimers, I have become very interested in the continual learning nature of this.
-    For example, when we released the `ref2vec` module and discussed it on the podcast, the `all-miniLM-L6-v2` model has never seen ref2vec before in its training set. Additionally, a model fine-tuned up to podcast #30 will have never seen ref2vec either!
+	自从加入Weaviate以来，我对零-shot与精调嵌入模型之间的对话产生了浓厚的兴趣。特别是在与Nils Reimers的对话中，我对这种持续学习的特性产生了浓厚的兴趣。
+    例如，当我们发布了`ref2vec`模块并在播客中讨论时，`all-miniLM-L6-v2`模型在其训练集中从未见过`ref2vec`。此外，截至第30期播客的模型也从未见过`ref2vec`！
 
-    I am also very interested in the fine-tuning of cross-encoder models, which you can learn more about [here](/blog/cross-encoders-as-reranker).
+我也对交叉编码器模型的微调非常感兴趣，您可以在[这里](/blog/cross-encoders-as-reranker)了解更多相关信息。
 
-3. Custom Benchmarking
+3. 自定义基准测试
 
-	I have also been working on the BEIR benchmarking in Weaviate (nearly finished!). This has inspired me to think about benchmarking search performance and how this is relevant to Weaviate users. As a quick introduction, this describes constructing a set of “gold” documents per query that we want the system to return. We then use metrics like hits at k, recall, ndcg, and precision to report how well the system was able to do this.
+	我还在Weaviate中进行BEIR基准测试的工作（即将完成！）。这激发了我思考搜索性能基准测试以及它对Weaviate用户的相关性。简单介绍一下，这描述了根据查询构建一组“黄金”文档，我们希望系统返回这些文档。然后，我们使用命中数k、召回率、ndcg和精确度等指标来报告系统在这方面的表现如何。
 
-I have spoken with a few Weaviate users who typically evaluate search performance with a small set of manually annotated queries and relevant documents. A new breakthrough is emerging in the intersection of Large Language Models and Search, in addition to the more flashy retrieval-augmented ChatGPT, etc., using the Language Models to `generate training or testing data` for any given dataset, led by papers such as InPars, Promptagator, and InPars-Light.
-All you do is ask ChatGPT to `please generate a query that would match the information in this document`. There are a little more details to this such as roundtrip consistency filtering, so stay tuned for our Weaviate podcast with Leo Boystov to learn more about this!
+我已经与一些Weaviate用户进行了交流，他们通常使用一小组手动注释的查询和相关文档来评估搜索性能。在大型语言模型和搜索的交叉领域，除了更引人注目的检索增强ChatGPT等，还出现了一个新的突破，使用语言模型来“生成训练或测试数据”，由InPars、Promptagator和InPars-Light等论文引领。
+您所需要做的就是向ChatGPT询问“请生成一个与这个文档中的信息相匹配的查询”。当然，还有一些细节需要注意，比如往返一致性过滤，所以请继续关注我们与Leo Boystov的Weaviate播客，以了解更多信息！
 
-## Concluding thoughts on Podcasting
+## 关于播客的总结思考
 
-I think there are a lot of obvious benefits for making a podcast. It is a great way to meet people for the joint sake of collaboration on content and overall developing friendships and partnerships. It is a great intellectual exercise to explore these ideas with someone who has a different perspective than you do.
-I would also add that podcasting has a nice fact verification component to it compared to a solo content medium like blogging. For example, if I make some wild claim about embedding models while interviewing Nils Reimers, he will probably respond with a shocked reaction and refute the claim. I am very happy to have taken up podcasting and super excited about this new ability to build a knowledge base from the podcasts!
-
+我认为制作播客有很多明显的好处。它是一个很好的方式，能够与他人合作创作内容，建立友谊和合作伙伴关系。与一个与你观点不同的人一起探索这些想法，是一种很好的智力锻炼。
+我还想补充的是，与博客等单一内容媒介相比，播客具有很好的事实验证组件。例如，如果我在采访Nils Reimers时对嵌入模型提出了一些荒谬的说法，他很可能会震惊地回应并驳斥这种说法。我很高兴开始从事播客，并对能够从播客中构建知识库的新能力感到非常兴奋！
 
 import StayConnected from '/_includes/stay-connected.mdx'
 
