--- a/blog/2023-04-27-how-to-chatgpt-plugin/index.mdx
+++ b/blog/2023-04-27-how-to-chatgpt-plugin/index.mdx
@@ -1,58 +1,62 @@
 ---
-title: How to Create Your Own ChatGPT Plugin
-slug: how-to-chatgpt-plugin
-authors: [shukri, zain]
+authors:
+- shukri
+- zain
 date: 2023-04-27
+description: A show-and-tell of how we created the Weaviate Retrieval Plugin for ChatGPT
 image: ./img/hero.png
-tags: ['how-to', 'integrations']
-description: "A show-and-tell of how we created the Weaviate Retrieval Plugin for ChatGPT"
-
+slug: how-to-chatgpt-plugin
+tags:
+- how-to
+- integrations
+title: How to Create Your Own ChatGPT Plugin
 ---
-![How To Create ChatGPT Plugins](./img/hero.png)
 
-<!-- truncate -->
+![如何创建ChatGPT插件](./img/hero.png)
 
-## Introduction
+<!-- 截断 -->
 
-A couple weeks back in our blog on [ChatGPT plugins](/blog/weaviate-retrieval-plugin) we talked about the potential for plugins to help expand ChatGPT’s functionality by allowing it to leverage third-party resources to act upon the conversations that you have with it. The value for these plugins is greatest when they help make up for a current short-coming that ChatGPT has. For example ChatGPT is built on top of GPT 4.0 which is a large language model which doesn’t understand mathematical and algebraic reasoning as well as it does written language and thus using the WolframAlpha plugin as a “math-mode” when needing to solve mathematical problems makes perfect sense!
+## 简介
 
-Another short-coming of ChatGPT we spoke about was that it lacks the use of context in answering your questions unless this context is specifically conveyed in the body of the prompt. The solution to this shortcoming was the [ChatGPT retrieval plugin](https://github.com/openai/chatgpt-retrieval-plugin) which connects ChatGPT to a vector database which provides a robust solution to the above problem. The vector database connected to ChatGPT can be used to store and refer to relevant information when answering prompts and acts as longterm memory of the LLM.
+在我们关于[ChatGPT插件](/blog/weaviate-retrieval-plugin)的博客中，我们谈到了插件的潜力，可以通过允许ChatGPT利用第三方资源来处理与其对话，从而扩展ChatGPT的功能。这些插件的价值在于它们帮助弥补ChatGPT目前存在的不足。例如，ChatGPT是建立在GPT 4.0之上的一个大型语言模型，它对数学和代数推理的理解不如对书面语言的理解，因此在需要解决数学问题时，使用WolframAlpha插件作为“数学模式”是完全合理的！
 
-Plugins are a very powerful way that you and I can contribute to improving LLM use-cases without having to retrain the underlying GPT model. Let’s say you’re using ChatGPT and realize that it doesn't carry a conversation well enough when you ask it a question about the weather or it doesn’t have a specialized enough understanding of your health to suggest tasty and healthy recipes based on your previous blood sugar, pressure levels and health conditions. You can create a plugin to tackle these problems and in doing so improve usability for everyone since they can simply install your plugin and use it!
+我们讨论过的ChatGPT的另一个缺点是，除非该上下文明确传达在提示的内容中，否则它在回答问题时不使用上下文。解决这个问题的方法是[ChatGPT检索插件](https://github.com/openai/chatgpt-retrieval-plugin)，它将ChatGPT连接到一个向量数据库，为上述问题提供了一个强大的解决方案。与ChatGPT连接的向量数据库可以用于存储和引用相关信息，在回答提示时充当LLM的长期记忆。
 
-The only questions then are **how do you get access to the exclusive plugin alpha** that OpenAI is running and **how do you go about creating a plugin for ChatGPT!?** Worry not, we come bearing good news on both notes 😀.
+插件是一种非常强大的方式，您和我可以通过插件来改进LLM的用例，而无需重新训练基础的GPT模型。假设您正在使用ChatGPT，并意识到当您询问有关天气的问题时，它的对话能力不够好，或者它对您的健康情况没有足够专业的理解，无法根据您之前的血糖、血压水平和健康状况为您提供美味又健康的食谱建议。您可以创建一个插件来解决这些问题，并通过这样做来提高所有人的可用性，因为他们可以简单地安装您的插件并使用它！
 
-Weaviate is partnering with OpenAI and Cortical Ventures to host a full-day [Generative AI Hackathon at ODSC East](https://www.eventbrite.com/e/generative-ai-hackathon-odsc-east-2023-tickets-616336738777) on May 11th in Boston at the Hynes Convention Center. There you will get access to the **OpenAI API** and **ChatGPT plugin tokens** that OpenAI is providing and you will be able to create your own plugins as well as AutoGPT-like apps to solve problems near and dear to your heart using tools like ChatGPT and Weaviate!  You can register using the link provided above, slots are limited so don’t delay!
+那么唯一的问题是，**您如何获得OpenAI运行的独家插件alpha的访问权限**，以及**您如何创建ChatGPT的插件！** 不用担心，我们带来了两个好消息😀。
+
+Weaviate正在与OpenAI和Cortical Ventures合作，在5月11日在波士顿的Hynes会议中心举办为期一天的[ODSC East生成式AI黑客马拉松活动](https://www.eventbrite.com/e/generative-ai-hackathon-odsc-east-2023-tickets-616336738777)。在那里，您将获得OpenAI提供的**OpenAI API**和**ChatGPT插件令牌**的访问权限，您还可以使用ChatGPT和Weaviate等工具创建自己的插件以及类似AutoGPT的应用程序，解决您关心的问题！您可以使用上面提供的链接进行注册，名额有限，请尽快注册！
 
 ![hackathon](./img/hackathon.png)
 
-Now getting to how you can create your own plugin for ChatGPT, here we will go through the step-by-step process of how we created the Weaviate Retrieval Plugin. The Weaviate retrieval plugin connects ChatGPT to an instance of Weaviate and allows it to query relevant documents from the vector database, upsert documents to “remember” information for later and also delete documents to “forget” them! The process that we took to create this plugin is quite similar to what one might take in creating a general plugin and thus we believe it’s quite instructive and we hope that it helps!
+现在开始介绍如何为ChatGPT创建自己的插件。在这里，我们将逐步介绍创建Weaviate检索插件的过程。Weaviate检索插件将ChatGPT与Weaviate实例连接起来，允许其从向量数据库中查询相关文档，更新文档以便以后“记住”信息，以及删除文档以“忘记”它们！创建此插件的过程与创建通用插件的过程非常相似，因此我们认为这对于理解插件的创建过程非常有帮助，希望能对您有所帮助！
 
-## How to Create a ChatGPT Plugin
+## 如何创建ChatGPT插件
 
 ![plugin](./img/plugin-light.png#gh-light-mode-only)
 ![plugin](./img/plugin-dark.png#gh-dark-mode-only)
 
-The entire code repository for the complete Weaviate Retrieval Plugin is located [here](https://github.com/weaviate/howto-weaviate-retrieval-plugin). Let’s go through the steps one-by-one including code snippets and some challenges we encountered and how we eventually solved them.
+完整的Weaviate检索插件的代码存储库位于[这里](https://github.com/weaviate/howto-weaviate-retrieval-plugin)。让我们一步一步地介绍，包括代码片段、我们遇到的一些挑战以及我们最终是如何解决它们的。
 
-The tech stack we used to develop this plugin is as follows:
-1. Python: write everything in python
-2. FastAPI: the server used to run the plugin
-3. Pytest: to write and run our tests
-4. Docker: we create containers to build, test and deploy the plugin
+我们用于开发此插件的技术栈如下：
+1. Python：使用Python编写所有内容
+2. FastAPI：用于运行插件的服务器
+3. Pytest：用于编写和运行测试
+4. Docker：我们创建容器来构建、测试和部署插件
 
-Below are the steps we took to develop the plugin, Part 1 focuses on building a web application with our desired endpoint, Part 2 is specific to the development of a ChatGPT plugin while Part 3 is all about remote deployment using Fly.io. We cover the steps in order but feel free to skip steps depending on you level of comfort with the material.
+以下是我们开发插件所采取的步骤，第一部分专注于构建具有所需端点的Web应用程序，第二部分专门针对ChatGPT插件的开发，而第三部分则介绍了使用Fly.io进行远程部署的内容。我们按顺序介绍这些步骤，但根据您对材料的熟悉程度，可以随意跳过步骤。
 
-## Part 1: Building a Web App
+## 第一部分：构建Web应用程序
 
-**Step 1: Setup the Development Environment**
+**步骤1：设置开发环境**
 
-To setup our development environment we used [Dev Containers](https://containers.dev/). The `devcontainer.json` [file](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/.devcontainer/devcontainer.json)  was updated by adding [Fly.io](https://fly.io/), [Docker](https://www.docker.com/) and [Poetry](https://python-poetry.org/). You can find other dev container templates [here](https://containers.dev/templates).
+为了设置我们的开发环境，我们使用了[Dev Containers](https://containers.dev/)。通过添加[Fly.io](https://fly.io/)、[Docker](https://www.docker.com/)和[Poetry](https://python-poetry.org/)，更新了`devcontainer.json`[文件](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/.devcontainer/devcontainer.json)。您可以在[这里](https://containers.dev/templates)找到其他的开发容器模板。
 
-**Step 2. Test the Setup**
+**步骤2. 测试设置**
 
-1. After setting up the environment we tested that everything worked by:
-Create a [dummy endpoint](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/57c00bc85aea3a155d330f0de72525ee26a665d1#diff-c16fbf0c6f7b90a46b94b36f88893c2d174476088608841f7254afba0e81373d) which will simply respond with a `{“Hello”: “World”}` object when called.
+1. 在设置环境后，我们通过以下方式测试了一切是否正常：
+创建一个[dummy endpoint](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/57c00bc85aea3a155d330f0de72525ee26a665d1#diff-c16fbf0c6f7b90a46b94b36f88893c2d174476088608841f7254afba0e81373d)，当调用时它会简单地响应一个`{"Hello": "World"}`对象。
 
 ```python
 from fastapi import FastAPI
@@ -67,18 +71,18 @@ def read_root():
     return {"Hello": "World"}
 ```
 
-2. Set up tests using PyTest which accomplish two goals - firstly we want to check that our Weaviate instance is up and running which is setup [here](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/57c00bc85aea3a155d330f0de72525ee26a665d1#diff-e52e4ddd58b7ef887ab03c04116e676f6280b824ab7469d5d3080e5cba4f2128) and secondly that the Fast API endpoint is responding. Both of these tests are defined [here](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/57c00bc85aea3a155d330f0de72525ee26a665d1#diff-5f4f40de92f9f92f3638fdd1c3eace62db4d153ff64b915f82e43e6781960ed6)
+2. 使用PyTest设置测试，达到两个目标 - 首先，我们要检查我们的Weaviate实例是否正在运行，设置方法在[这里](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/57c00bc85aea3a155d330f0de72525ee26a665d1#diff-e52e4ddd58b7ef887ab03c04116e676f6280b824ab7469d5d3080e5cba4f2128)，其次，我们要检查Fast API端点是否响应。这两个测试的定义在[这里](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/57c00bc85aea3a155d330f0de72525ee26a665d1#diff-5f4f40de92f9f92f3638fdd1c3eace62db4d153ff64b915f82e43e6781960ed6)。
 
-3. We also created a [makefile](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/57c00bc85aea3a155d330f0de72525ee26a665d1#diff-beda42571c095172ab63437d050612a571d0d9ddd3ad4f2aecbce907a9b7e3d0) to automate running and tests and firing up the endpoint. In our makefile we also specify a `run` command which will spin up the server locally to ensure the network connectivity settings are all setup properly. You can also connect to port 8000 which is the default port that FastAPI listens to to check connectivity.
+3. 我们还创建了一个[makefile](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/57c00bc85aea3a155d330f0de72525ee26a665d1#diff-beda42571c095172ab63437d050612a571d0d9ddd3ad4f2aecbce907a9b7e3d0)来自动化运行和测试，并启动端点。在我们的makefile中，我们还指定了一个`run`命令，它将在本地启动服务器，以确保网络连接设置正确。您还可以连接到端口8000，这是FastAPI默认监听的端口，以检查连接性。
 
-4. The last step to verify everything is running correctly is to go to `localhost:8000/docs` which should give you the [Swagger UI](https://swagger.io/tools/swagger-ui/) for your endpoint. The Swagger UI gives you the ability to play around with your server, interact with any endpoints you may have defined, and it all gets updated in real-time - this is particularly convenient when we later want to call endpoints manually to interact with our Weaviate instance to query, upsert and delete objects.
+4. 最后一步是验证一切是否正常运行，您可以访问 `localhost:8000/docs`，这将为您提供用于您的端点的[Swagger UI](https://swagger.io/tools/swagger-ui/)。Swagger UI 允许您与服务器进行交互，与您定义的任何端点进行交互，并且所有内容都会实时更新 - 当我们以后想要手动调用端点与我们的 Weaviate 实例进行查询、更新和删除对象时，这将非常方便。
 
 ![swaggerui](./img/swagger.png)
-Once you've done all of the above and everything looks to be in good order you can start implementing plugin specific functions.
+完成以上步骤并确认一切都符合要求后，您可以开始实现特定插件的功能。
 
-**Step 3: Implement a function to get vector embeddings**
+**第三步：实现一个函数来获取向量嵌入**
 
-Since we are implementing a plugin that connects a vector database to ChatGPT we will need to define a way to generate vector embeddings which can be used when we upsert documents to our database to generate and store vector embeddings for our documents, this function will also be used to vectorize queries when querying and performing vector search over the vector database. This function is [implemented here](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/server/embedding.py).
+由于我们正在实现一个将向量数据库连接到ChatGPT的插件，我们需要定义一种生成向量嵌入的方法，当我们更新数据库中的文档时，可以生成和存储文档的向量嵌入。同时，当查询和执行向量搜索时，该函数也将用于将查询向量化。该函数的实现可在[此处](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/server/embedding.py)找到。
 ```python
 import openai
 
@@ -91,11 +95,13 @@ def get_embedding(text):
     return results["data"][0]["embedding"]
 ```
 
-Here we simply chose to use the [`ada-002` model](https://openai.com/blog/new-and-improved-embedding-model) as OpenAI specifies that this particular model is used for their template retrieval plugin, however since the querying is done in the vector database we could have chosen to use any vectorizer.
+在这里，我们选择使用[`ada-002`模型](https://openai.com/blog/new-and-improved-embedding-model)，因为OpenAI指定了这个特定的模型用于他们的模板检索插件，但是由于查询是在向量数据库中进行的，我们也可以选择使用任何向量化器。
 
-**Step 4: Implement function to initialize the Weaviate Client and vector database**
+**步骤4：实现初始化Weaviate客户端和向量数据库的函数**
 
-Next we implement a [couple of functions](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/server/database.py) to initialize the Weaviate python client and through the client initialize the Weaviate instance by checking if a schema exists and if it doesn’t we add one.
+接下来，我们实现了一些函数来初始化 Weaviate Python 客户端，并通过客户端初始化 Weaviate 实例，通过检查模式是否存在，如果不存在，则添加一个模式。
+
+请参考[这里](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/server/database.py)的代码实现。
 
 ```python
 import weaviate
@@ -136,9 +142,9 @@ def init_db():
         logging.debug("Skipping schema creation")
 ```
 
-**Step 5: Initialize the database when the server starts and add a dependency for the Weaviate client**
+**步骤5：在服务器启动时初始化数据库并为Weaviate客户端添加依赖项**
 
-We now need to integrate the usage of these functions so that on starting the ChatGPT plugin server up we automatically initialize the Weaviate instance and connection of the client. We do this by using FastAPI’s [lifespan](https://fastapi.tiangolo.com/advanced/events/#lifespan-events) feature in the  [main server python script](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/server/main.py) which gets run every time the server starts. This simple function calls our database initialization function defined above which yields the Weaviate client object. Any logic that needs to be run on server shutdown can be included after the `yield` statement below. Since we don’t need to do anything specific for our plugin we leave it empty.
+现在我们需要集成这些函数的使用，以便在启动ChatGPT插件服务器时自动初始化Weaviate实例和客户端的连接。我们使用FastAPI的[lifespan](https://fastapi.tiangolo.com/advanced/events/#lifespan-events)功能在[主服务器Python脚本](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/server/main.py)中实现这一点，该脚本在每次服务器启动时运行。这个简单的函数调用了我们上面定义的数据库初始化函数，它返回Weaviate客户端对象。任何需要在服务器关闭时运行的逻辑可以在下面的`yield`语句之后添加。由于我们的插件不需要执行任何特定的操作，所以我们将其保留为空。
 
 ```python
 from fastapi import FastAPI
@@ -161,17 +167,17 @@ def get_weaviate_client():
     yield get_client()
 ```
 
-After this point the initial server setup and testing is complete. Now we get to the fun part of implementing our endpoints that will give ChatGPT different ways to interact with our plugin!
+在此之后，初始的服务器设置和测试已经完成。现在我们来到了实现端点的有趣部分，这些端点将为ChatGPT提供与我们的插件进行不同交互方式的能力！
 
-## Part 2: Implementing OpenAI Specific Functionality
+## 第二部分：实现OpenAI特定功能
 
 ![fun](./img/areyahavingfunmrkrabs.png)
 
-**Step 1: Development of the Weaviate Retrieval Plugin specific endpoints**
+**步骤1：开发Weaviate Retrieval插件特定的端点**
 
-Our plugin has three specific endpoints: `/upsert`, `/query` and `/delete`. These functions give ChatGPT the ability to add objects to the Weaviate instance, query and search through objects in the Weaviate instance and lastly delete objects if needed. Upon interacting with ChatGPT while the plugin is enabled it can be instructed to use a particular endpoint via prompt but will also independently decide when to use the appropriate endpoint to complete the response to a query! These endpoints are what extend the functionality of ChatGPT and enable it to interact with the vector database.
+我们的插件有三个特定的端点：`/upsert`、`/query`和`/delete`。这些功能使ChatGPT能够将对象添加到Weaviate实例中，对Weaviate实例中的对象进行查询和搜索，以及在需要时删除对象。在启用插件的情况下与ChatGPT交互时，可以通过提示指示其使用特定的端点，但它也会独立决定何时使用适当的端点来完成对查询的响应！这些端点是扩展ChatGPT功能并使其能够与向量数据库进行交互的关键。
 
-We developed these three endpoints through test driven development, as such we will display the tests that each endpoint must first pass and then the implementation that satisfies these tests. In preparation to setup the Weaviate instance for these tests we added the following test documents through a fixture:
+我们通过测试驱动开发的方式开发了这三个端点，因此我们将首先展示每个端点必须通过的测试，然后展示满足这些测试的实现。为了准备设置Weaviate实例以进行这些测试，我们通过一个测试数据集添加了以下测试文档：
 ```python
 @pytest.fixture
 def documents(weaviate_client):
@@ -187,11 +193,11 @@ def documents(weaviate_client):
         client.post("/upsert", json=doc)
 ```
 
-**Implementing the `/upsert` endpoint:**
+**实现`/upsert`端点：**
 
-After using the `/upsert` endpoint we mainly want to test that that we got the appropriate status code in addition to checking that the content, id and vector’s were all upserted correctly.
+在使用`/upsert`端点之后，我们主要想要测试是否获得了适当的状态码，同时检查内容、id和向量是否都被正确地插入了。
 
-Here's the test that carries this out:
+以下是执行此操作的测试代码：
 
 ```python
 def test_upsert(weaviate_client):
@@ -205,7 +211,7 @@ def test_upsert(weaviate_client):
     assert docs[0]["vector"] is not None
 ```
 
-The implementation below satisfies all of these requirements and tests above:
+下面的实现满足了所有这些要求和上面的测试：
 ```python
 @app.post("/upsert")
 def upsert(doc: Document, client=Depends(get_weaviate_client)):
@@ -222,14 +228,14 @@ def upsert(doc: Document, client=Depends(get_weaviate_client)):
     return {"status": "ok"}
 ```
 
-The `/query` and `/delete` endpoints were developed similarly, if you're interested you can read below!
+`/query` 和 `/delete` 端点的开发方式类似，如果您感兴趣可以阅读下面的内容！
 
 <details>
-  <summary>See details for /query endpoint implementation.</summary>
+  <summary>查看 /query 端点实现的详细信息。</summary>
 
-**Implement the `/query` endpoint:**
+**实现 `/query` 端点：**
 
-For this endpoint we mainly want to check that it returns the right number of objects and that the required document that we were expecting is part of the returned objects.
+对于这个端点，我们主要想检查它是否返回了正确数量的对象，并且我们期望的必需文档是否包含在返回的对象中。
 
 ```python
 def test_query(documents):
@@ -243,7 +249,7 @@ def test_query(documents):
         assert "lion" in result["document"]["text"]
 ```
 
-The implementation below will take in a query and return a list of retrieved documents and metadata.
+下面的实现将接受一个查询并返回一个检索到的文档和元数据列表。
 
 ```python
 @app.post("/query", response_model=List[QueryResult])
@@ -274,11 +280,11 @@ def query(query: Query, client=Depends(get_weaviate_client)) -> List[Document]:
 </details>
 
 <details>
-  <summary>See details for /delete endpoint implementation.</summary>
+  <summary>查看/delete端点的实现细节。</summary>
 
-**Implement the `/delete` endpoint:**
+**实现`/delete`端点：**
 
-Here we simply want to check that the response returned correctly and that after removing one object we the number of total objects in the Weaviate instance goes down by one.
+在这里，我们只是想检查返回的响应是否正确，并且在删除一个对象后，Weaviate实例中的总对象数量减少了一个。
 
 ```python
 def test_delete(documents, weaviate_client):
@@ -292,7 +298,7 @@ def test_delete(documents, weaviate_client):
     assert num_docs_after_delete == num_docs_before_delete - 1
 ```
 
-And the implementation of the endpoint is as follows:
+而端点的实现如下所示：
 
 ```python
 @app.post("/delete")
@@ -316,21 +322,21 @@ def delete(delete_request: DeleteRequest, client=Depends(get_weaviate_client)):
 ```
 </details>
 
-Here we showed you how our endpoints work, this will be where your plugin will be most unique, depending on what functionality you want implemented you can create corresponding endpoints and test them.
+在这里，我们向您展示了我们的端点是如何工作的。这将是您的插件最独特的地方，根据您想要实现的功能，您可以创建相应的端点并进行测试。
 
 ::::tip
 Notice the docstrings we’ve included with all of our endpoints, these will be very important in the next step!
 ::::
 
-**Step 2: Prepare plugin manifest files**
+**步骤 2: 准备插件清单文件**
 
-This is where you specify to OpenAI and specifically ChatGPT which endpoints your plugin is exposing, how it can use those endpoints to accomplish specific tasks, what errors to expect if the endpoints are not used correctly and much more! [OpenAI instruction specify](https://platform.openai.com/docs/plugins/getting-started/plugin-manifest) that you need to create two files: the [`openapi.yaml` file](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/.well-known/openapi.yaml) and the [`ai-plugin.json` file](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/.well-known/ai-plugin.json).
+这是您向OpenAI和ChatGPT指定插件公开的端点的位置，您可以在这里说明它们如何使用这些端点来完成特定任务，以及如果未正确使用这些端点时可能出现的错误等等！[OpenAI的指南](https://platform.openai.com/docs/plugins/getting-started/plugin-manifest)指出，您需要创建两个文件：[`openapi.yaml`文件](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/.well-known/openapi.yaml)和[`ai-plugin.json`文件](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/.well-known/ai-plugin.json)。
 
-As you can see both of these files need to be in the `.well-known` directory which must be mounted into the app as follows in order for ChatGPT to utilize them correctly.
+正如您所见，这两个文件都需要放在`.well-known`目录中，并且必须按照以下方式将其挂载到应用程序中，以便ChatGPT能够正确地使用它们。
 
 `app.mount("/.well-known", StaticFiles(directory=".well-known"), name="static")`
 
-Lets have a closer look at at the two files:
+让我们仔细看一下这两个文件：
 
 `ai-plugin.json`
 
@@ -355,32 +361,32 @@ Lets have a closer look at at the two files:
     "legal_info_url": "http://www.example.com/legal"
 }
 ```
-This specifies data such as the name of the app, logo assets, and more interestingly, under the `name_for_model` field, how the model(in this case ChatGPT/GPT4.0) will refer to the plugin and the description of the plugin,`description_for_model`, that can be read and understood by the model.
+这个文件指定了应用程序的名称、标志资产等数据，还有更有趣的是，在`name_for_model`字段下，指定了模型（在本例中为ChatGPT/GPT4.0）将如何引用插件以及插件的描述`description_for_model`，这些描述可以被模型读取和理解。
 
 `openapi.yaml`
 
 ![YAML](./img/openaiapi.png)
 
-This file most importantly specifies the endpoints and describes each one to ChatGPT.
+这个文件最重要的是指定了ChatGPT要使用的端点，并对每个端点进行了描述。
 
 ::::tip
 Generating this `.yaml` file was quite challenging until we realized that you could simply generate the spec in json format by going to the SwaggerUI using `/docs` and clicking on the `/openapi.json` link. Then you can use this [website](https://www.json2yaml.com/) to convert from `.json` to `.yaml`.
 ::::
 
 
-These two files are critical in order for ChatGPT to understand and utilize the exposed endpoints for your plugin correctly.
+这两个文件对于ChatGPT正确理解和利用插件的暴露端点非常重要。
 
-One very interesting finding in our experiments was that ChatGPT reads these files to understand not just when to use the endpoints but also how to correctly use them! So if ChatGPT is not correctly using your endpoints you should try and improve the descriptions for the plugin and the endpoints. OpenAI includes some [best practices](https://platform.openai.com/docs/plugins/getting-started/writing-descriptions) for creating these descriptions. From our experiments we found that if the description was not sufficient in describing how the endpoint should be used ChatGPT would call the endpoints with the incorrect syntax and would try again if it did fail. See the example below:
+我们在实验中发现一个非常有趣的发现是，ChatGPT会读取这些文件，不仅了解何时使用端点，还了解如何正确使用它们！因此，如果ChatGPT没有正确使用您的端点，您应该尝试改进插件和端点的描述。OpenAI为创建这些描述提供了一些[最佳实践](https://platform.openai.com/docs/plugins/getting-started/writing-descriptions)。根据我们的实验，我们发现如果描述不足以描述如何使用端点，ChatGPT将以错误的语法调用端点，并在失败后重试。请参阅下面的示例：
 
-![error](./img/error.png)
+![错误](./img/error.png)
 
-**Take-aways:** ChatGPT doesn’t have hard-coded instructions on when and how to use the plugin endpoints. You need to be very careful about how you describe your plugin and endpoints to ChatGPT so that they can be used as intended! The `openapi.json` spec that FastAPI generates for you is based on how you documented the endpoints in your code i.e. the function’s name, docstring, query description and the field’s description in your pydantic models. The steps used to do this are outside the scope of this blog post, for more details please refer to the FastAPI documentation. In general you want to have complete and comprehensive documentation for your plugin because the documentation is what will allow it to be used correctly!
+**要点：** ChatGPT没有硬编码的指令来告诉你何时以及如何使用插件端点。您需要非常小心地描述您的插件和端点，以便ChatGPT可以按预期使用它们！FastAPI为您生成的`openapi.json`规范是基于您在代码中对端点进行文档化的方式，即函数的名称、文档字符串、查询描述和pydantic模型中字段的描述。完成这些步骤不在本博文的范围之内，请参考FastAPI文档以获取更多详细信息。通常情况下，您希望为您的插件编写完整和全面的文档，因为文档是确保正确使用插件的关键！
 
-Additionally you have to be careful when specifying the descriptions, doc strings etc. not to exceed the context length since the plugin description, API requests, and API responses are all inserted into the conversation with ChatGPT. This counts against the context limit of the model.
+另外，当指定描述、文档字符串等内容时，您需要注意不要超过上下文长度，因为插件描述、API请求和API响应都会插入到与ChatGPT的对话中。这些都会占用模型的上下文限制。
 
-**Step 3: Local deployment of your plugin and testing using the ChatGPT user interface**
+**步骤3：在ChatGPT用户界面上进行插件的本地部署和测试**
 
-Allow http://localhost:8000 and https://chat.openai.com to make cross requests to the plugin’s server. We can do this easily with FastAPI’s CORSMiddleware middleware.
+允许http://localhost:8000和https://chat.openai.com向插件的服务器发起跨域请求。我们可以使用FastAPI的CORSMiddleware中间件轻松实现这一点。
 
 ```python
 # for localhost deployment
@@ -399,43 +405,43 @@ if os.getenv("ENV", "dev") == "dev":
     )
 ```
 
-The above code will only be used during local testing and will enable your locally deployed app to talk with ChatGPT. Note that our plugin actually has two apps which differ based on the type of authentication used, for the local deployment and testing we don’t use authentication and for remote deployment we use Bearer tokens and https as we will explain later. Following this you can run the plugin locally by following the instructions detailed [here](https://platform.openai.com/docs/plugins/getting-started/running-a-plugin). This will allow you to test all the endpoints through the ChatGPT UI and see they are functioning correctly.
+上述代码仅在本地测试期间使用，并将使您在本地部署的应用程序能够与ChatGPT进行通信。请注意，我们的插件实际上有两个应用程序，根据所使用的身份验证类型而有所不同，对于本地部署和测试，我们不使用身份验证，而对于远程部署，我们使用Bearer令牌和https，稍后我们将进行说明。按照[此处](https://platform.openai.com/docs/plugins/getting-started/running-a-plugin)的详细说明，您可以在本地运行插件。这将允许您通过ChatGPT UI测试所有端点，并确保它们正常运行。
 
-Have a look at some of the endpoint testing we did locally before moving onto the next point:
+在继续下一步之前，先来看一下我们在本地进行的一些端点测试：
 
 ![test1](./img/test1.png)
 ![test2](./img/test2.png)
-*Making sure the upsert and query endpoints are working correctly. Note that here depending on the language used in our prompt ChatGPT will choose to call the appropriate endpoints.*
+*确保upsert和query端点正常工作。请注意，根据我们在提示中使用的语言，ChatGPT将选择调用相应的端点。*
 
-## Part 3: Remote Deployment to Fly.io
+## 第三部分：远程部署到Fly.io
 
-**Step 1: Prepare to deploy plugin remotely to Fly.io**
+**步骤1：准备将插件远程部署到Fly.io**
 
-Once we have tested the plugin locally to our satisfaction we can deploy remotely and install it into ChatGPT. Here are the steps we follow to share our plugin with those who have access to the alpha:
+一旦我们在本地满意地测试了插件，我们可以将其部署到远程并安装到ChatGPT中。以下是我们分享插件给那些有alpha访问权限的人所遵循的步骤：
 
-1. Create a remote Weaviate Instance: This was done using the [Weaviate Cloud Services](https://console.weaviate.cloud/)
+1. 创建远程Weaviate实例：这是使用[Weaviate云服务](https://console.weaviate.cloud/)完成的。
 
-2. Add a [dockerfile](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/Dockerfile). This dockerfile is just a modified version the file [template provided by OpenAI](https://github.com/openai/chatgpt-retrieval-plugin/blob/main/Dockerfile) and will be used to setup your environment remotely and starts up the server.
+2. 添加一个[dockerfile](https://github.com/weaviate/howto-weaviate-retrieval-plugin/blob/main/Dockerfile)。这个dockerfile只是一个修改过的版本，基于[OpenAI提供的模板文件](https://github.com/openai/chatgpt-retrieval-plugin/blob/main/Dockerfile)，将用于远程设置您的环境并启动服务器。
 
-3. Update the plugin manifest config files `ai-plugin.json` and `openapi.yaml` to now [use authentication](https://platform.openai.com/docs/plugins/getting-started/plugin-manifest) in the form of a bearer token and your newly created WCS instance instead of localhost.
+3. 更新插件清单配置文件 `ai-plugin.json` 和 `openapi.yaml`，现在使用身份验证（[使用指南](https://platform.openai.com/docs/plugins/getting-started/plugin-manifest)）形式为Bearer令牌和您新创建的WCS实例，而不是localhost。
 
-4. Update the app to make sure all communication is authenticated.
+4. 更新应用程序，确保所有通信都经过身份验证。
 
-You can see the full diff for the project as setup for local deployment thus far and how it was changed to ready it for remote deployment [here](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/9ba22539a321e6cb8cb676c2e3a6f3a945a3f967).
+您可以在[这里](https://github.com/weaviate/howto-weaviate-retrieval-plugin/commit/9ba22539a321e6cb8cb676c2e3a6f3a945a3f967)查看项目的完整差异，以了解它是如何准备好进行远程部署的。
 
-**Step 2: Deploy to Fly.io and Install in ChatGPT**
+**步骤2：在Fly.io上部署并在ChatGPT中安装**
 
-This is the last step and allows you to deploy your plugin to Fly.io, the detailed instructions provided [here](https://github.com/openai/chatgpt-retrieval-plugin/blob/main/docs/deployment/flyio.md) can be followed as is. Following this you can open up ChatGPT in your browser and if you have access to the plugin alpha you can install your plugin by specifying the URL where it is hosted and provide the bearer token to authenticate.
+这是最后一步，允许您将插件部署到Fly.io，在[这里](https://github.com/openai/chatgpt-retrieval-plugin/blob/main/docs/deployment/flyio.md)提供了详细的说明，可以按照文档中的指示进行操作。完成后，您可以在浏览器中打开ChatGPT，如果您有插件的Alpha测试权限，可以通过指定插件的托管URL并提供身份验证的Bearer令牌来安装插件。
 
-## Conclusions
+## 结论
 
-And that, ladies and gentlemen, is how we created our Weavaite retrieval plugin that augments ChatGPT with longterm memory. The process to create different plugins is quite similar and we believe most of these steps can be executed in a similar manner to create a wide variety of plugins with the most variation being found in Part 2 where you define endpoint specific to you plugin.
+女士们先生们，这就是我们创建的用于增强ChatGPT的Weavaite检索插件的过程。创建不同的插件的过程非常相似，我们相信大部分步骤可以以类似的方式执行，唯一的变化可能在第二部分，即您定义特定于插件的端点的地方。
 
-Let's end off by visualizing the [flow](https://platform.openai.com/docs/plugins/introduction/plugin-flow) of how ChatGPT can now use the plugin we just created. The figure below details how the `/query` endpoint can be used. Depending on the prompt it can also call the `/delete` and `/upsert` endpoints as well.
+让我们通过可视化ChatGPT如何使用我们刚刚创建的插件来结束。下面的图示详细说明了如何使用`/query`端点。根据提示，它还可以调用`/delete`和`/upsert`端点。
 
 ![diagram](./img/diagram-light.png#gh-light-mode-only)
 ![diagram](./img/diagram-dark.png#gh-dark-mode-only)
-*More specifically when the user prompts ChatGPT it will look at the `openapi.yaml` file to read the endpoint descriptions and will decide the appropriate endpoint to use in the execution of the prompt. Above it chooses to use the `/query` endpoint. Then it will try to build the correct request and retry upon failure. The query will return to ChatGPT relevant documents from Weaviate which it will use to answer the original prompt!*
+*更具体地说，当用户提示ChatGPT时，它将查看`openapi.yaml`文件以读取终端描述，并决定在提示执行中使用的适当终端。在上面的例子中，它选择使用`/query`终端。然后，它将尝试构建正确的请求，并在失败时进行重试。查询将从Weaviate返回与原始提示相关的文档，ChatGPT将使用这些文档来回答原始提示！*
 
 import WhatNext from '/_includes/what-next.mdx'
 
