--- a/blog/2023-06-06-embedded-weaviate/index.mdx
+++ b/blog/2023-06-06-embedded-weaviate/index.mdx
@@ -1,12 +1,13 @@
 ---
-title: How to run an embedded vector database in 10 lines of code
-slug: embedded-local-weaviate
-authors: [dan]
+authors:
+- dan
 date: 2023-06-06
+description: The Weaviate server can be run locally directly from client code
 image: ./img/hero.png
-tags: ['how-to']
-description: "The Weaviate server can be run locally directly from client code"
-
+slug: embedded-local-weaviate
+tags:
+- how-to
+title: How to run an embedded vector database in 10 lines of code
 ---
 
 import Tabs from '@theme/Tabs';
@@ -15,14 +16,14 @@ import FilteredTextBlock from '@site/src/components/Documentation/FilteredTextBl
 import PyCode from '!!raw-loader!/_includes/code/embedded.py';
 import TSCode from '!!raw-loader!/_includes/code/embedded.ts';
 
-Yes, 10 Python lines of code, generously formatted with whitespace. Or 14 for TypeScript. Oh, and all your data stays private locally, and we don't charge you anything. We're also going to build a useful example, illustrating a testing scenario. Here's how.
+是的，10行Python代码，使用大量空格进行格式化。或者对于TypeScript来说是14行。另外，您的所有数据都会在本地保持私密，并且我们不会向您收费。我们还将构建一个有用的示例，以展示测试场景。下面是具体步骤。
 
-<!-- truncate -->
+<!-- 截断 -->
 
 
-## 1. Install the client library
+## 1. 安装客户端库
 
-The Python and TypeScript client libraries support running Weaviate embedded on Linux, and starting with versions 3.21.0 and 1.2.0 respectively, on macOS as well.
+Python和TypeScript客户端库支持在Linux上运行嵌入式Weaviate，从版本3.21.0和1.2.0开始，还支持在macOS上运行。
 
 <Tabs groupId="languages">
   <TabItem value="py" label="Python">
@@ -43,12 +44,12 @@ The Python and TypeScript client libraries support running Weaviate embedded on 
 </Tabs>
 
 
-## 2. Run the code
+## 2. 运行代码
 
 <Tabs groupId="languages">
   <TabItem value="py" label="Python">
 
-  Save as `embedded.py` and run `python embedded.py`:
+  将其保存为 `embedded.py` 并运行 `python embedded.py`：
   <br/>
 
   <FilteredTextBlock
@@ -61,7 +62,7 @@ The Python and TypeScript client libraries support running Weaviate embedded on 
 
   <TabItem value="ts" label="TypeScript">
 
-  Save as `embedded.ts` and run `node --loader=ts-node/esm embedded.ts`:
+  保存为`embedded.ts`并运行`node --loader=ts-node/esm embedded.ts`：
   <br/>
 
   <FilteredTextBlock
@@ -74,34 +75,32 @@ The Python and TypeScript client libraries support running Weaviate embedded on 
 </Tabs>
 
 
-## <i class="fa-solid fa-screwdriver-wrench"></i> How does this work?
+## <i class="fa-solid fa-screwdriver-wrench"></i> 这是如何工作的？
 
-Essentially, what happens behind the scenes is that the client library downloads the server binary, spawns it in a separate process, connects to it, then terminates it on exit. The data is persisted, so you can use it from future invocations, or you can [transfer it to another instance](/developers/weaviate/manage-data/read-all-objects/#restore-to-a-target-instance).
+实质上，在幕后发生的是，客户端库会下载服务器二进制文件，将其在一个独立的进程中启动，连接到它，然后在退出时终止它。数据是持久化的，因此您可以在未来的调用中使用它，或者您可以将其[转移到另一个实例](/developers/weaviate/manage-data/read-all-objects/#restore-to-a-target-instance)。
 
-You can learn more about running Weaviate locally from client code on the [Embedded Weaviate](/developers/weaviate/installation/embedded/) page.
+您可以从客户端代码在[Embedded Weaviate](/developers/weaviate/installation/embedded/)页面上了解有关在本地运行Weaviate的更多信息。
 
+## <i class="fa-solid fa-lightbulb"></i> 使用场景
 
-## <i class="fa-solid fa-lightbulb"></i> Use cases
+使用Embedded Weaviate，您可以做很多事情！
 
-What can you do with Embedded Weaviate? Quite a few things!
+首先，您可以在本地机器上快速开始使用Weaviate，无需显式下载、安装或实例化服务器。
 
-First off, you can get started very quickly with Weaviate on your local machine, without having to explicitly download, install or instantiate a server.
+### Jupyter笔记本
 
+您还可以在Jupyter笔记本中使用嵌入式Weaviate，包括在Google Colaboratory中使用。以下是上述示例的[Google Colab笔记本](https://colab.research.google.com/drive/1XAJc9OvkKhsJRmheqWZmjYU707dqEIl8?usp=sharing)。
 
-### Jupyter notebooks
+![Colab截图](./img/colab.png)
 
-You can also use Embedded Weaviate from Jupyter notebooks, including on Google Colaboratory. Here is the example above as [Google Colab notebook](https://colab.research.google.com/drive/1XAJc9OvkKhsJRmheqWZmjYU707dqEIl8?usp=sharing).
+### 在CI/CD流水线中使用Weaviate
 
-  ![Colab screenshot](./img/colab.png)
-
-### Use Weaviate in CI/CD pipelines
-
-You can use Embedded Weaviate in automated tests, where you can run integration tests without having to manage a separate server instance. Here is the example above slightly modified to perform similarity search and test that the added object was found.
+您可以在自动化测试中使用嵌入式Weaviate，在不需要管理单独的服务器实例的情况下运行集成测试。下面是稍作修改的示例，用于执行相似性搜索并测试是否找到了添加的对象。
 
 <Tabs groupId="languages">
   <TabItem value="py" label="Python">
 
-  Save as `embedded_test.py` and run `pytest`. (If you don't have pytest, run `pip install pytest`.)
+  另存为 `embedded_test.py` 并运行 `pytest`。（如果您没有安装 pytest，请运行 `pip install pytest`。）
   <br/>
 
   <FilteredTextBlock
@@ -114,7 +113,7 @@ You can use Embedded Weaviate in automated tests, where you can run integration 
 
   <TabItem value="ts" label="TypeScript">
 
-  Save as `embedded_test.ts` and run `npx jest`:
+  另存为 `embedded_test.ts` 并运行 `npx jest`:
   <br/>
 
   <FilteredTextBlock
@@ -126,7 +125,7 @@ You can use Embedded Weaviate in automated tests, where you can run integration 
   </TabItem>
 </Tabs>
 
-Have you found other use cases for embedded Weaviate? Let us know in the comments below!
+您是否在嵌入式Weaviate中找到其他用例？在下面的评论中告诉我们！
 
 
 import WhatNext from '/_includes/what-next.mdx'
