--- a/blog/2023-07-11-weaviate-1-20-release/index.mdx
+++ b/blog/2023-07-11-weaviate-1-20-release/index.mdx
@@ -1,122 +1,129 @@
 ---
-title: Weaviate 1.20 Release
-slug: weaviate-1-20-release
-authors: [dan,erika,jp,zain]
+authors:
+- dan
+- erika
+- jp
+- zain
 date: 2023-07-11
+description: Weaviate 1.20 released with multi-tenancy, PQ, search re-ranking, autocut,
+  hybrid fusion algorithm ... take a look!
 image: ./img/hero.png
-tags: ['release', 'engineering']
-description: "Weaviate 1.20 released with multi-tenancy, PQ, search re-ranking, autocut, hybrid fusion algorithm ... take a look!"
-
+slug: weaviate-1-20-release
+tags:
+- release
+- engineering
+title: Weaviate 1.20 Release
 ---
-Weaviate `1.20` is here! As always, a brand-new release means a set of brand-new features. Here are the ⭐️*highlights*⭐️:
+
+Weaviate `1.20`已经发布了！一如既往，全新的版本意味着全新的功能。以下是⭐️*亮点*⭐️：
 
 ![Weaviate 1.20](./img/highlights.png)
 
-<!-- truncate -->
-1. [Multi-tenancy](#multi-tenancy) – A scalable, efficient and easy solution for use-cases with many tenants per Weaviate cluster.
-1. [PQ + Re-scoring](#pq--re-scoring) – Product quantization (PQ) allows for faster vector search - now at basically no cost to accuracy!
-1. [Autocut](#autocut) – A new way to set a threshold - set how many groups of results to retrieve from the result set.
-1. [Search re-ranking](#search-re-ranking) – Multi-stage search (& re-ranking) for better end results. Multiple re-rankers available!
-1. [New hybrid search ranking algorithm](#new-hybrid-search-ranking-algorithm) – Additional method available for deriving hybrid search scores.
-1. [And more](#and-more).
+<!-- 截断 -->
+1. [多租户](#multi-tenancy) – 一个可扩展、高效且简单的解决方案，适用于Weaviate集群中的多个租户的使用场景。
+2. [PQ + 重新评分](#pq--re-scoring) – 产品量化（PQ）使向量搜索更快 - 现在几乎没有准确性上的成本！
+1. [自动截断](#autocut) - 设置一个阈值的新方式，可以从结果集中检索多少个结果组。
+1. [搜索重新排序](#search-re-ranking) - 多阶段搜索（和重新排序），以获得更好的最终结果。支持多个重新排序器！
+1. [新的混合搜索排序算法](#new-hybrid-search-ranking-algorithm) - 提供了一个额外的方法来计算混合搜索得分。
+1. [等等](#and-more)。
 
-We hope we've whet your appetite - so what're you waiting for?! Keep scrolling ⬇️!
+希望我们已经激起了你的兴趣-那你还在等什么呢？继续向下滚动⬇️！
 
 :::caution Downgrade from `1.20` not possible
 Downgrading from `1.20.x` to a `1.19.x` or lower is not possible.
 Please proceed with caution, such as by making a backup of your data & schema, or cluster before upgrading.
 :::
 
-## Multi-tenancy
+## 多租户
 
-> **Store data from up to millions of tenants in a single setup.**
+> **在单个设置中存储来自数百万个租户的数据。**
 
-![Conceptual diagram of multi-tenancy in Weaviate](./img/Weaviate-multi-tenancy-light.png#gh-light-mode-only)
-![Conceptual diagram of multi-tenancy in Weaviate](./img/Weaviate-multi-tenancy-dark.png#gh-dark-mode-only)
+![Weaviate中多租户的概念图](./img/Weaviate-multi-tenancy-light.png#gh-light-mode-only)
+![Weaviate中多租户的概念图](./img/Weaviate-multi-tenancy-dark.png#gh-dark-mode-only)
 
-We’ll keep this brief as Etienne covered this in great detail in [this blog post](https://weaviate.io/blog/multi-tenancy-vector-search). The key point, though, is that Weaviate now makes it easy to store data from up to *millions of tenants in a single setup*.
+我们将简要介绍，因为Etienne在[这篇博客文章](https://weaviate.io/blog/multi-tenancy-vector-search)中已经详细介绍了这个问题。然而，关键点是Weaviate现在可以轻松地在单个设置中存储来自*数百万租户的数据*。
 
-This means that scaling your business or infrastructure to include data from a large group of users is easier and faster than ever. We have worked with our community on this feature to ensure that your compliance needs are met as well as performance needs, while keeping the experience a smooth one for everybody. Our multi-tenancy implementation allows for huge numbers of diverse users - whether they be large or small, and regardless of how often they access Weaviate.
+这意味着将您的业务或基础架构扩展到包括大量用户的数据变得比以往更加容易和快速。我们与我们的社区共同努力，以确保满足您的合规需求和性能需求，同时为每个人提供流畅的体验。我们的多租户实现允许处理大量不同的用户，无论他们是大型还是小型，以及无论他们使用Weaviate的频率如何。
 
-The result is a multi-tenancy solution that we are very proud of. This is an opt-in feature, where to use multi-tenancy, you simply enable the feature and add the tenant key for each operation as required.
+这是一个我们非常自豪的多租户解决方案的结果。这是一个可选择的功能，通过启用该功能并根据需要为每个操作添加租户键来使用多租户。
 
 :::tip Read more:
 - [Concepts: Data # Multi-tenancy](/developers/weaviate/concepts/data#multi-tenancy)
 - [How-to manage data: Multi-tenancy operations](/developers/weaviate/manage-data/multi-tenancy)
 :::
 
-## PQ + Re-scoring
+## PQ + 重新打分
 
-> **Compress vectors with little to no recall loss.**
+> **通过几乎没有召回损失来压缩向量。**
 
-![Conceptual diagram of query speed vs recall](./img/Weaviate-release-1-20_qps_recall_light.png#gh-light-mode-only)
-![Conceptual diagram of query speed vs recall](./img/Weaviate-release-1-20_qps_recall_dark.png#gh-dark-mode-only)
+![查询速度与召回率的概念图](./img/Weaviate-release-1-20_qps_recall_light.png#gh-light-mode-only)
+![查询速度与召回率的概念图](./img/Weaviate-release-1-20_qps_recall_dark.png#gh-dark-mode-only)
 
-With `1.20` we’ve improved Product Quantization (PQ) by leaps and bounds and are officially taking it out of experimental mode! Originally PQ was introduced and released in `1.18` and we wrote about it [here](/blog/ann-algorithms-hnsw-pq).
+在`1.20`版本中，我们对产品量化（PQ）进行了巨大的改进，并正式将其从实验模式中移出！最初PQ是在`1.18`版本中引入和发布的，我们在[这里](/blog/ann-algorithms-hnsw-pq)写了一篇文章介绍它。
 
-The short summary is that we’ve made a myriad of improvements around query speed performance, convenience of use with large datasets, added disk retrieval and rescoring to improve recall and more.
+简而言之，我们在查询速度性能、大数据集的使用便利性、磁盘检索和重新评分等方面进行了许多改进，以提高召回率等。
 
-For all the nitty gritty details, take a look at the below sections
+要了解所有细节，请查看以下部分
 
 <details>
-  <summary>Query Performance</summary>
+  <summary>查询性能</summary>
 
 <p>
-With `1.20` we’ve improved query performance when PQ is enabled by implementing a more efficient DistanceLookupTable.
+在`1.20`版本中，我们通过实现更高效的DistanceLookupTable来改进了PQ启用时的查询性能。
 <br/><br/>
-This was mainly accomplished in two ways:
+这主要通过以下两种方式实现：
 
-1. We restructured arrays by collapsing two-dimensional slices into a single dimension.
-This serves multiple purposes:
-It improves cache locality during lookups since now allocated memory is contiguous.
-It allows us to decrease the number of allocations that need to be made. We now allocate one slice as opposed to 128+ sub-slices. This also means that we no longer need to save unnecessary slice headers, further reducing the overall size.
+1. 我们重构了数组，将二维切片折叠成了一维。
+这有多个用途：
+它提高了查询时的高速缓存局部性，因为现在分配的内存是连续的。
+1. 它使我们能够减少需要进行的分配数量。现在我们只分配一个切片，而不是128个以上的子切片。这也意味着我们不再需要保存不必要的切片头，进一步减小了整体大小。
 
-2. We added a pool to reuse lookup lists between requests.
+2. 我们添加了一个池来在请求之间重用查找列表。
 
 </p>
 
 </details>
 
 <details>
-  <summary>Rescoring for Recall Performance</summary>
+  <summary>为召回性能进行重新评分</summary>
 
 <p>
-We’ve also improved recall by adding PQ rescoring efficiently to avoid any deterioration in performance. At first, when we calculate nearest neighbour distances, we only use compressed vector representations, this helps reduce memory requirements. However this distance might be inaccurate due to the distortion introduced by the lossy nature of PQ compression. This small distortion could affect the order/ranking of the vectors in the retrieved set which in turn affects the quality and relevance of the search results. To correct for this, we fetch from disk the uncompressed representation of all vectors in the final retrieved set, recalculate the distances to the query vector, and resort the list. After this rescoring phase we are then ready to respond to the query.
+我们通过高效地添加PQ重新评分来改进了召回率，以避免性能下降。首先，在计算最近邻距离时，我们只使用压缩的向量表示，这有助于减少内存需求。然而，由于PQ压缩的有损性质引入的失真，这个距离可能是不准确的。这种小的失真可能会影响检索集中向量的顺序/排名，从而影响搜索结果的质量和相关性。为了纠正这一点，我们从磁盘中获取最终检索集中所有向量的非压缩表示，重新计算与查询向量的距离，并重新排序列表。经过这个重新评分阶段，我们就可以对查询做出响应了。
 <br/><br/>
-Additionally, with the introduction of rescoring, detailed above, we no longer need to support having more than 256 centroids - based on our testing one byte per code should be more than enough. We use this to optimize the codebook and gain performance by allowing the compiler to inline the extract/put code. We also don’t need to cast bytes into `uint64` anymore since the size is fixed.
+此外，随着上述重新评分的引入，我们不再需要支持超过256个质心的情况 - 根据我们的测试，每个代码一个字节应该足够了。我们使用这个来优化码本，并通过允许编译器内联提取/放置代码来提高性能。我们也不再需要将字节强制转换为`uint64`，因为大小是固定的。
 </p>
 
 </details>
 
 <details>
-  <summary>Fit Time on Large Datasets</summary>
+  <summary>大型数据集上的拟合时间</summary>
 
-Previously, if you added a large number of objects prior to enabling quantization the PQ fitting algorithm would take a long time - putting the index into read-only mode. With `1.20` we’ve introduced the `trainingLimit` parameter which lets you define an upper limit on how many objects are used to train the PQ algorithm irrespective of the number of objects added to Weaviate. This parameter defaults to `100000` and so for large datasets if you load more objects, prior to enabling PQ, only `trainingLimit` subset will be used to train PQ - thus limiting the time it takes to fit. In addition to these major changes, we’ve also fixed numerous bugs.
+在之前的版本中，如果在启用量化之前添加了大量的对象，PQ拟合算法会花费很长时间，将索引置为只读模式。在 `1.20` 版本中，我们引入了 `trainingLimit` 参数，该参数允许您定义用于训练PQ算法的对象数量的上限，而不管添加到Weaviate中的对象数量如何。该参数默认为 `100000`，因此对于大型数据集，如果在启用PQ之前加载更多的对象，只会使用 `trainingLimit` 子集来训练PQ - 从而限制了拟合所需的时间。除了这些重大更改之外，我们还修复了许多错误。
 
 </details>
 
 <details>
-  <summary>Experiments - Before & After</summary>
+  <summary>实验 - 前后对比</summary>
 
-Below we provide a small taste of these experiments comparing PQ `1.18` vs the new and improved PQ of `1.20`. Firstly we show the performance on an experimental dataset followed by a more real-world dataset.
+下面我们提供了一小部分这些实验的味道，比较了PQ `1.18`与新的改进后的PQ `1.20`之间的性能差异。首先是在一个实验数据集上的性能，然后是在一个更真实的数据集上的性能。
 <p><br/></p>
 
-![Fig 1](./img/fig1_before.png)
-<small>Figure 1: Before(V1.18) Using Gist+l2. The Green curve is obtained using uncompressed vectors. Blue compressing with 960 segments (a dimension per segment, 4:1 compression ratio). Orange uses 240 segments (4 dimensions per segment, 16:1 compression ratio).</small>
+![图1](./img/fig1_before.png)
+<small>图1：在使用Gist+l2之前（V1.18）。绿色曲线是使用未压缩向量获得的。蓝色是使用960个段（每个段一个维度，4:1的压缩比）进行压缩。橙色是使用240个段（每个段四个维度，16:1的压缩比）。</small>
 <p><br/></p>
 
-![Fig 2](./img/fig2_after.png)
-<small>Figure 2: After(V1.20) Using Gist+l2. Both graphs are built using 32 max connections. The orange curve is obtained using uncompressed vectors. The blue when compressing with 160 segments (six dimensions per segment, 24:1 compression ratio).</small>
+![图2](./img/fig2_after.png)
+<small>图2: 在使用Gist+l2之后(V1.20)。两个图表都使用了32个最大连接数。橙色曲线是使用未压缩向量获得的，蓝色曲线是在压缩时使用了160个分段（每个分段六个维度，24:1的压缩比）。</small>
 <p><br/></p>
 
-A more real-world dataset example:
+一个更真实的数据集示例:
 <p><br/></p>
 
-![Fig 3](./img/fig3_real_world.png)
-<small>Figure 3: Using DBPedia vectorized with OpenAI `ada002` using 500,000 vectors + cosine (V1.20). Both graphs are built using 32 max connections. The orange curve is obtained using uncompressed vectors. The blue is obtained by compressing with six dimensions per segment, 24:1 compression ratio.</small>
+![图3](./img/fig3_real_world.png)
+<small>图3：使用DBPedia向量化的OpenAI `ada002`，使用500,000个向量+余弦（V1.20）。两个图表都使用32个最大连接进行构建。橙色曲线是使用未压缩的向量获得的。蓝色曲线是通过每个段使用六个维度进行压缩，压缩比为24:1获得的。</small>
 <p><br/></p>
 
-As can be clearly seen above, previously there was a cost to be paid for compressing whereas now there is no real cost - compressed vs uncompressed performance is nearly identical even at high compression ratios. In addition to the experiments above, where we use Gist and `ada002` vectorized DBPedia, we’ve also done many more tests using real-world datasets including high-dimensional vectors such as Meta’s Sphere. These tests demonstrate that we can generate high recall with PQ + rescoring achieving significant memory reduction. More to follow on these detailed experiments soon!
+如上所示，以前压缩是需要付出代价的，而现在实际上没有什么代价 - 即使在高压缩比下，压缩与未压缩的性能几乎相同。除了上面的实验外，我们还使用了Gist和`ada002`向量化的DBPedia以及其他许多使用真实数据集的测试，包括高维向量，如Meta's Sphere。这些测试表明，我们可以通过PQ +重新评分实现显著的内存减少，并实现高召回率。很快将有更多关于这些详细实验的信息发布！
 </details>
 
 :::tip Read more:
@@ -124,44 +131,44 @@ As can be clearly seen above, previously there was a cost to be paid for compres
 - [How-to configure: Indexes # Vector index (see `pq`)](/developers/weaviate/configuration/indexes#weaviates-vector-index)
 :::
 
-## Autocut
+## 自动裁剪
 
-> **Ask Weaviate to retrieve groups of results for convenience.**
+> **请让Weaviate方便地检索结果组。**
 
-![A cute cartoon of Weaviate presenting results](./img/Weaviate-release-1-20_autocut_light.png#gh-light-mode-only)
-![A cute cartoon of Weaviate presenting results](./img/Weaviate-release-1-20_autocut_dark.png#gh-dark-mode-only)
+![Weaviate漫画可爱地展示结果](./img/Weaviate-release-1-20_autocut_light.png#gh-light-mode-only)
+![Weaviate漫画可爱地展示结果](./img/Weaviate-release-1-20_autocut_dark.png#gh-dark-mode-only)
 
-Before `1.20`, limiting the number of search results meant manually specifying a `distance` or the `limit` (max) number of objects. Both of which can be a bit cumbersome to use, especially with no prior knowledge of the dataset.
+在`1.20`版本之前，限制搜索结果的数量意味着手动指定`distance`或`limit`（最大）对象的数量。这两种方法在没有先前了解数据集的情况下可能有些繁琐。
 
-With Autocut, you can solve this by simply specifying the number of groups of results to be returned. Each "group" is determined by reviewing distances between results, so that a "jump" in distance between results is considered a new group.
+使用Autocut，您只需简单地指定要返回的结果组的数量即可解决这个问题。每个“组”是通过查看结果之间的距离来确定的，因此在结果之间的距离发生“跳跃”时，被视为一个新的组。
 
 <details>
-  <summary>Autocut explained with an example</summary>
+  <summary>使用示例解释自动裁剪</summary>
 
-More concretely, imagine a set of hypothetical results to a query “large economy” from a dataset of countries. The results are sorted by distance from the query.
+更具体地说，想象一下从一个国家数据集中对查询“大型经济体”的一组假设结果。结果按照与查询的距离进行排序。
 
-| Title | Distance | Gap > 0.07 | Group |
+| 标题 | 距离 | Gap > 0.07 | 组别 |
 | --- | --- | --- | --- |
-| United States | 0.07 | ✅ | 1 |
-| China | 0.09 | ❌ | 1 |
-| Japan | 0.23 | ✅ | 2 |
-| France | 0.31 | ✅ | 3 |
-| Canada | 0.33 | ❌ | 3 |
-| Russia | 0.36 | ❌ | 3 |
-| Indonesia | 0.48 | ✅ | 4 |
-| Switzerland | 0.50 | ❌ | 4 |
-| Taiwan | 0.51 | ❌ | 4 |
-| Poland | 0.53 | ❌ | 4 |
+| 美国 | 0.07 | ✅ | 1 |
+| 中国 | 0.09 | ❌ | 1 |
+| 日本 | 0.23 | ✅ | 2 |
+| 法国 | 0.31 | ✅ | 3 |
+| 加拿大 | 0.33 | ❌ | 3 |
+| 俄罗斯 | 0.36 | ❌ | 3 |
+| 印度尼西亚 | 0.48 | ✅ | 4 |
+| 瑞士 | 0.50 | ❌ | 4 |
+| 台湾 | 0.51 | ❌ | 4 |
+| 波兰 | 0.53 | ❌ | 4 |
 
-You might see that there’s a relatively large jump in distance between some results, for example between “China” and “Japan”, and another one between “Japan” and “France”. Each autocut group would be based on these.
+您可能会发现一些结果之间存在相对较大的距离差异，例如在“中国”和“日本”之间以及在“日本”和“法国”之间。每个自动裁剪组将基于这些差异进行分组。
 
-Here, an `autocut` value of 1 would return all "group 1" results (i.e. the first 2 results), an `autocut` value of 2 would return all "group 1" and "group 2" results (i.e. the first 3 results), and so on.
+在这里，`autocut` 值为1将返回所有“group 1”的结果（即前2个结果），`autocut` 值为2将返回所有“group 1”和“group 2”的结果（即前3个结果），依此类推。
 </details>
 
 <details>
-  <summary>An example GraphQL query with Autocut</summary>
+  <summary>带有 Autocut 的 GraphQL 查询示例</summary>
 
-This example searches the `Article` class for articles related to "america", and retrieves the top 3 groups with Autocut.
+此示例在 `Article` 类中搜索与“america”相关的文章，并使用 Autocut 检索前3个组的结果。
 
 ```graphql
 {
@@ -188,15 +195,15 @@ Please refer to [our documentation](/developers/weaviate/api/graphql/additional-
 </details>
 
 <details>
-  <summary>Motivation for Autocut</summary>
+  <summary>Autocut的动机</summary>
 
-The first motivation for Autocut was to provide a better experience to human searchers. By only delivering relevant results, we present a cleaner user interface for information discovery. In addition to human search, there is also fascinating research on how this impacts generative search: in "[Large Language Models Can Be Easily Distracted by Irrelevant Context](https://arxiv.org/pdf/2302.00093.pdf)", Shi et al. have shown that model performance is dramatically decreased when irrelevant information is included in the prompt. This led to the second motivation for the autocut filter: limiting irrelevant search results that would be fed to generative search.
+Autocut的第一个动机是为了为人类搜索者提供更好的体验。通过只提供相关的结果，我们为信息发现提供了更清晰的用户界面。除了人类搜索，还有关于这对生成性搜索的影响的有趣研究：在《大语言模型容易被无关上下文分散注意力》一文中，Shi等人表明，当提示中包含无关信息时，模型的性能会显著下降。这导致了自动切割过滤器的第二个动机：限制会被输入到生成性搜索中的无关搜索结果。
 
 </details>
 
-Autocut aims approximate where a user would “cut” the results intuitively after observing N jumps in the distance from the query.
+Autocut旨在在观察到查询距离的N次跳跃后，近似确定用户在直觉上“切割”结果的位置。
 
-It can be combined with all [vector search operators](/developers/weaviate/api/graphql/get#vector-search-operators): `nearXXX`, `bm25`, and `hybrid`. `autocut` is placed after the operator, at the same level with `limit`/`offset`. It is disabled by default and can be explicitly disabled by setting its value to 0 or a negative number.
+它可以与所有的[向量搜索操作符](/developers/weaviate/api/graphql/get#vector-search-operators)结合使用：`nearXXX`，`bm25`和`hybrid`。`autocut`放置在操作符之后，在`limit`/`offset`的同一级别上。它默认情况下是禁用的，可以通过将其值设置为0或负数来显式禁用。
 
 :::tip Read more:
 - [GraphQL references: Additional operators # Autocut](/developers/weaviate/api/graphql/additional-operators#autocut)
@@ -205,27 +212,27 @@ It can be combined with all [vector search operators](/developers/weaviate/api/g
 - [How-to search: Hybrid search # Autocut](/developers/weaviate/search/hybrid#autocut)
 :::
 
-## Search re-ranking
+## 搜索重排序
 
-> **Multi-stage search for a better final results set.**
+> **多阶段搜索以获得更好的最终结果集。**
 
-![A conceptual figure of a multi-stage search with Weaviate](./img/Weaviate-release-1-20_reranker_light.png#gh-light-mode-only)
-![A conceptual figure of a multi-stage search with Weaviate](./img/Weaviate-release-1-20_reranker_dark.png#gh-dark-mode-only)
+![多阶段搜索的概念图示（Weaviate）](./img/Weaviate-release-1-20_reranker_light.png#gh-light-mode-only)
+![多阶段搜索的概念图示（Weaviate）](./img/Weaviate-release-1-20_reranker_dark.png#gh-dark-mode-only)
 
-We are introducing our first set of rerankers with two modules:
-- Cohere’s reranker, and
-- Integration with Sentence transformers cross-encoders.
+我们引入了第一组重排序器，包括两个模块：
+- Cohere的重排序器，
+- 与句子转换器交叉编码器的集成。
 
-Rerankers can improve the quality of the result set by reordering the results of a search, using a more expensive process than the initial search. As a reranker works on a smaller subset of data, different approaches can be used to improve search relevance.
+通过重新排序搜索结果，重新排序器可以使用比初始搜索更昂贵的过程来提高结果集的质量。由于重新排序器在较小的数据子集上工作，可以使用不同的方法来提高搜索相关性。
 
-With our reranker modules, you can conveniently perform [multi-stage searches](/blog/cross-encoders-as-reranker) without leaving Weaviate.
+使用我们的重新排序器模块，您可以在不离开Weaviate的情况下方便地进行[多阶段搜索](/blog/cross-encoders-as-reranker)。
 
-In other words, you can perform a search - for example, a vector search - and then use a reranker to re-rank the results of that search. Our reranker modules are compatible with all of vector, bm25, and hybrid searches.
+换句话说，您可以执行搜索，例如向量搜索，然后使用重新排序器对该搜索结果进行重新排序。我们的重新排序器模块与向量、bm25和混合搜索兼容。
 
 <details>
-  <summary>An example GraphQL query with a reranker</summary>
+  <summary>带有重新排序器的GraphQL查询示例</summary>
 
-You can use reranking in a GraphQL query as follows:
+您可以按以下方式在GraphQL查询中使用重新排序器：
 
 ```graphql
 {
@@ -256,13 +263,13 @@ You can use reranking in a GraphQL query as follows:
 Please refer to [our documentation](/developers/weaviate/search/rerank) for more code examples, including for various Weaviate client libraries.
 :::
 
-This query retrieves 50 results from the `Product` class, using a hybrid search with the query “What is ref2vec?”. It then re-ranks the results using the `content` property of the `Product` class, and the query “what is ref2vec?”.
+此查询使用混合搜索从`Product`类中检索50个结果，查询为“What is ref2vec?”。然后使用`Product`类的`content`属性和查询“what is ref2vec?”对结果进行重新排序。
 
-You can specify which `property` of the `Product` class you want to pass to the reranker. Note that here, the returned `score` will include the score from the reranker.
+您可以指定要传递给重新排序的`Product`类的哪个`property`。请注意，这里返回的`score`将包括重新排序的分数。
 
 </details>
 
-This is just a first step in integrating ranking models with Weaviate. Read [our blog here](/blog/ranking-models-for-better-search) for further thoughts on this exciting space, and let us know what you want to see next 😉!
+这只是将排名模型与Weaviate集成的第一步。阅读[我们的博客](/blog/ranking-models-for-better-search)以获取更多关于这个令人兴奋的领域的想法，并告诉我们您希望看到的下一步的内容😉！
 
 :::tip Read more:
 - [Modules / Reranker-cohere](/developers/weaviate/modules/retriever-vectorizer-modules/reranker-cohere)
@@ -270,21 +277,21 @@ This is just a first step in integrating ranking models with Weaviate. Read [our
 - [How-to search: Reranking](/developers/weaviate/search/rerank)
 :::
 
-## New hybrid search ranking algorithm
+## 新的混合搜索排名算法
 
-> **A score-based hybrid results merger algorithm.**
+> **基于得分的混合结果合并算法。**
 
-![A conceptual figure of a hybrid score merger](./img/Weaviate-release-1-20_hybrid_merger_light.png#gh-light-mode-only)
-![A conceptual figure of a hybrid score merger](./img/Weaviate-release-1-20_hybrid_merger_dark.png#gh-dark-mode-only)
+![混合得分合并的概念图](./img/Weaviate-release-1-20_hybrid_merger_light.png#gh-light-mode-only)
+![混合得分合并的概念图](./img/Weaviate-release-1-20_hybrid_merger_dark.png#gh-dark-mode-only)
 
-Hybrid search uses results from a keyword (BM25) search and a vector search to produce its final set of results. In `1.20`, we introduce a new, optional, ranking algorithm that takes the BM25 and vector search scores to produce a more nuanced ranking of objects.
+混合搜索使用关键词（BM25）搜索和向量搜索的结果来生成最终的搜索结果集。在`1.20`版本中，我们引入了一种新的可选的排名算法，它利用BM25和向量搜索的分数来生成更细致的对象排名。
 
-We are calling this the `relative score fusion` ranking algorithm, as it works by normalizing and summing the BM25 score and vector similarity values. This is in contrast to the existing `ranked fusion` algorithm which produced a new rank based on a sum of inverses of the BM25 and vector rankings.
+我们将这个算法称为“相对分数融合”排名算法，它通过对BM25分数和向量相似性值进行归一化和求和来工作。这与现有的“排名融合”算法不同，后者基于BM25和向量排名的倒数之和产生新的排名。
 
 <details>
-  <summary>Example GraphQL query with relative score fusion</summary>
+  <summary>使用相对分数融合的GraphQL查询示例</summary>
 
-In this example, we perform a hybrid search on the `Question` class, using the query “food”. We specifically tell Weaviate to use the `relative score fusion` algorithm to rank the results.
+在这个示例中，我们对`Question`类执行了一个混合搜索，使用了查询词“food”。我们明确告诉Weaviate使用`相对分数融合`算法来对结果进行排序。
 
 ```graphql
 {
@@ -311,39 +318,39 @@ Please refer to [our documentation](/developers/weaviate/search/hybrid#fusion-ra
 
 </details>
 
-In our internal benchmarks, it showed improved recall performance over the existing algorithm, and we encourage you to try it out. This change also enables the new `AutoCut` feature to be used with hybrid searches, allowing you to automate how the search result threshold is set.
+在我们的内部基准测试中，相比现有算法，它展现出了更好的召回性能，并且我们鼓励您尝试它。这个改变还使得新的`AutoCut`功能可以与混合搜索一起使用，允许您自动设置搜索结果的阈值。
 
-Stay tuned, as we’ll be describing the `relative score fusion` feature in more detail in a separate blog post soon 👀.
+请继续关注，因为我们将很快在单独的博客文章中详细描述`relative score fusion`功能。👀
 
 :::tip Read more:
 - [GraphQL references: Vector search parameters # hybrid](/developers/weaviate/api/graphql/vector-search-parameters#variables-2)
 - [How-to search: Hybrid](/developers/weaviate/search/hybrid)
 :::
 
-## And more!
+## 还有更多！
 
-![A conceptual figure of Weaviate performing a search](./img/Weaviate-release-1-20_search_light.png#gh-light-mode-only)
-![A conceptual figure of Weaviate performing a search](./img/Weaviate-release-1-20_search_dark.png#gh-dark-mode-only)
+![Weaviate执行搜索的概念图](./img/Weaviate-release-1-20_search_light.png#gh-light-mode-only)
+![Weaviate执行搜索的概念图](./img/Weaviate-release-1-20_search_dark.png#gh-dark-mode-only)
 
-### Request success/failure rate in Prometheus metrics
+### Prometheus指标中的请求成功/失败率
 
-With `1.20` we’re rolling out a way to monitor the fraction of requests that succeed/fail due to user errors, and/or server errors. This enables us to track these ratios over time and see if significant updates affect this. Having a code for each request simplifies the log monitoring process!
+使用 `1.20` 版本，我们推出了一种监控由于用户错误或服务器错误导致的请求成功/失败比例的方式。这使我们能够随着时间的推移跟踪这些比例，并查看重大更新是否会影响此比例。为每个请求提供一个代码简化了日志监控过程！
 
-Given this new way to track each request, we have added a new metric, `requests_total`. There are three possible statuses:
-- `ok`: request was successful
-- `user_error`: request ended with an error, that is mostly due to *users* wrong API usage
-- `server_error`: request ended with an unexpected error
+在跟踪每个请求的新方式下，我们添加了一个新的指标，`requests_total`。有三种可能的状态：
+- `ok`：请求成功
+- `user_error`: 请求以错误结束，这主要是由于*用户*错误使用 API
+- `server_error`: 请求以意外错误结束
 
-Additionally, there are three labels associated with this metric:
-- `api`: `graphql` or `rest`
-- `query_type`: name of the endpoint
+此外，该指标有三个与之关联的标签：
+- `api`: `graphql` 或 `rest`
+- `query_type`: 终端点的名称
     - `Get` / `Aggregate` / `Explore` / `batch` / `classification` / `misc` / `nodes` / `objects` / `schema` / `backup`
-- `class_name`: name of your class
+- `class_name`: 您的类的名称
 
 <details>
-  <summary>Example requests</summary>
+  <summary>示例请求</summary>
 
-Here are some example requests:
+以下是一些示例请求:
 
 ```
 requests_total{api="graphql",class_name="n/a",query_type="",status="ok"} 839
@@ -364,17 +371,17 @@ requests_total{api="rest",class_name="n/a",query_type="schema",status="user_erro
 
 </details>
 
-The full list of metrics that are offered can be found [here](/developers/weaviate/configuration/monitoring#obtainable-metrics)
+可以在[这里](/developers/weaviate/configuration/monitoring#obtainable-metrics)找到提供的完整指标列表。
 
-### Chaos benchmarks improvements
+### 混沌基准改进
 
-Scalability and performance are front of mind for us and as such with `1.20` we’ve introduced new chaos engineering style pipelines to help us assess Weaviate's performance and recall on ANN benchmarks including assessing Weaviate performance on PQ compressed vs. uncompressed vectors.
+可扩展性和性能是我们关注的重点，因此在 `1.20` 版本中，我们引入了新的混沌工程风格的流水线，以帮助我们评估 Weaviate 在 ANN 基准测试中的性能和召回率，包括评估 Weaviate 在 PQ 压缩和非压缩向量上的性能。
 
-## Summary
+## 摘要
 
-That's it from us - we hope you enjoy the new features and improvements in Weaviate `1.20`. As always, the new Weaviate releases are available on [WCS](https://console.weaviate.cloud/) just a short time after the open source release. So it'll be available for you to use/upgrade very soon.
+这就是关于Weaviate `1.20`中新功能和改进的全部内容。和往常一样，新版本的Weaviate在开源发布后的很短时间内就会在[WCS](https://console.weaviate.cloud/)上提供。所以您很快就能够使用/升级它。
 
-Thanks for reading, and see you next time 👋!
+感谢您的阅读，下次见👋!
 
 import WhatNext from '/_includes/what-next.mdx'
 
